--- a/data/cards/31006879.yaml
+++ b/data/cards/31006879.yaml
@@ -1,7 +1,7 @@
 konami_id: 17250
 password: 31006879
 name:
-  en: Ready! Set! Duel!
+  en: On Your Mark, Get Set, DUEL!
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 骑乘决斗！加速！
 text:
   en: |-
-    When this card is activated: If you control no other cards, you can add 1 "Synchron" monster from your Deck to your hand. Once per turn, during your Standby Phase: Place 1 Signal Counter on this card. You can remove 2 Signal Counters from your field and send this face-up card to the GY; draw 2 cards, then send 1 card from your hand to the GY. You can only activate 1 "Ready! Set! Duel!" per turn.
+    When this card is activated: If you control no other cards, you can add 1 "Synchron" monster from your Deck to your hand. Once per turn, during your Standby Phase: Place 1 Signal Counter on this card. You can remove 2 Signal Counters from your field and send this face-up card to the GY; draw 2 cards, then send 1 card from your hand to the GY. You can only activate 1 "On Your Mark, Get Set, DUEL!" per turn.
   de:
   es:
   fr:
