--- a/data/cards/55554175.yaml
+++ b/data/cards/55554175.yaml
@@ -1,7 +1,7 @@
 konami_id: 17112
 password: 55554175
 name:
-  en: Performapal ClassiKuriboh
+  en: Performapal Classikuriboh
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 娱乐伙伴 古典栗子球
 text:
   en: |-
-    If this card is destroyed by its own Pendulum Effect: End the Battle Phase. You can only use each of the following effects of "Performapal ClassiKuriboh" once per turn. You can discard this card, then target 1 card in your Pendulum Zone; its Pendulum Scale becomes 1 until the end of this turn. When you take battle damage while this card is in your GY: You can place this card in your Pendulum Zone.
+    If this card is destroyed by its own Pendulum Effect: End the Battle Phase. You can only use each of the following effects of "Performapal Classikuriboh" once per turn. You can discard this card, then target 1 card in your Pendulum Zone; its Pendulum Scale becomes 1 until the end of this turn. When you take battle damage while this card is in your GY: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ def: 200
 pendulum_scale: 8
 pendulum_effect:
   en: |-
-    When an opponent's monster declares a direct attack, destroy this card.
+    When an opponent's monster declares a direct attack, this card is destroyed.
   de:
   es:
   fr:
