--- a/data/cards/56677752.yaml
+++ b/data/cards/56677752.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 娱乐伙伴 异色眼管家
 text:
   en: |-
-    If this card is in your hand or GY: You can target 1 "Performapal" or "Odd-Eyes" Monster Card you control, except "Performapal Odd-Eyes Butler"; Special Summon this card, then destroy the targeted card. You can only use this effect of "Performapal Odd-Eyes Butler" once per turn. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
+    If this card is in your hand or GY: You can target 1 "Performapal" or "Odd-Eyes" Monster Card you control, except "Performapal Odd-Eyes Butler"; Special Summon this card, then destroy that card. You can only use this effect of "Performapal Odd-Eyes Butler" once per turn. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
