--- a/data/cards/66156348.yaml
+++ b/data/cards/66156348.yaml
@@ -1,21 +1,21 @@
 konami_id: 17257
 password: 66156348
 name:
-  en: Dragon King's Myth
+  en: Saga of the Dragon Emperor
   de:
   es:
   fr:
   it:
   pt:
   ja: <ruby>竜<rt>りゅう</rt></ruby><ruby>皇<rt>おう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>話<rt>わ</rt></ruby>
-  ja_romaji: Ryūō Shinwa
+  ja_romaji: Ryūōshinwa
   ko: 용황신화
   ko_rr: Yonghwangsinhwa
   zh-TW:
   zh-CN:
 text:
   en: |-
-    Target 1 Dragon monster you control; its current ATK becomes doubled (until the end of this turn), then, if your opponent controls a Dragon monster, the activation of the targeted monster's effects cannot be negated this turn. During your Main Phase: You can banish this card from your GY; Special Summon 1 of your Dragon Xyz Monsters that is banished or in your GY, in Defense Position. You can only use 1 "Dragon King's Myth" effect per turn, and only once that turn.
+    Target 1 Dragon monster you control; its ATK becomes doubled (until the end of this turn), then, if your opponent currently controls a Dragon monster, the activation of the targeted monster's effects cannot be negated for the rest of this turn. During your Main Phase: You can banish this card from your GY; Special Summon 1 of your Dragon Xyz Monsters that is banished or in your GY, in Defense Position. You can only use 1 "Saga of the Dragon Emperor" effect per turn, and only once that turn.
   de:
   es:
   fr:
