--- a/data/cards/68490573.yaml
+++ b/data/cards/68490573.yaml
@@ -1,7 +1,7 @@
 konami_id: 17251
 password: 68490573
 name:
-  en: The Great Soul
+  en: Time to Stand Up
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 宏大之魂
 text:
   en: |-
-    If a Dragon Synchro Monster is on the field: Special Summon up to 2 "Resonator" monsters and/or Level 1 Dragon monsters from your Deck. When a monster effect is activated while you control a Level 10 or higher DARK Dragon Synchro Monster: You can banish this card from your GY; negate that effect, and if you do, 1 Synchro Monster you control gains 2000 ATK until the end of the next turn. You can only use each effect of "The Great Soul" once per turn.
+    If a Dragon Synchro Monster is on the field: Special Summon up to 2 monsters, that are "Resonator" monsters and/or Level 1 Dragon monsters, from your Deck. When a monster effect is activated, while you control a Level 10 or higher DARK Dragon Synchro Monster: You can banish this card from your GY; negate that effect, and if you do, 1 Synchro Monster you control gains 2000 ATK until the end of the next turn. You can only use each effect of "Time to Stand Up" once per turn.
   de:
   es:
   fr:
