--- a/data/cards/70551291.yaml
+++ b/data/cards/70551291.yaml
@@ -1,7 +1,7 @@
 konami_id: 17242
 password: 70551291
 name:
-  en: The Legendary Swordmaster Black Luster Soldier
+  en: Black Luster Soldier - Legendary Swordsman
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 传说的剑斗士 混沌戦士
 text:
   en: |-
-    You can Ritual Summon this card with "Chaos Form" or "Super Soldier Ritual". Must be Ritual Summoned. During your Draw Phase, before you draw: You can reveal this card in your hand; give up your normal draw this turn, and if you do, add 1 Ritual Spell from your Deck to your hand. Your opponent cannot activate cards or effects during your Battle Phase. When this attacking card that was Ritual Summoned using a Normal Monster destroys an opponent's monster by battle: You can shuffle all cards they control into the Deck.
+    You can Ritual Summon this card with "Chaos Form" or "Super Soldier Ritual". Must be Ritual Summoned. During your Draw Phase, before you draw: You can reveal this card in your hand; give up your normal draw this turn, and if you do, add 1 Ritual Spell from your Deck to your hand. Your opponent cannot activate cards or effects during your Battle Phase. When this attacking card, that was Ritual Summoned using a Normal Monster, destroys an opponent's monster by battle: You can shuffle all cards your opponent controls into the Deck.
   de:
   es:
   fr:
