--- a/data/cards/78217065.yaml
+++ b/data/cards/78217065.yaml
@@ -1,7 +1,7 @@
 konami_id: 17248
 password: 78217065
 name:
-  en: Evolution Result Burst
+  en: Evolution End Burst
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 进化结末爆裂光
 text:
   en: |-
-    Add 1 "Overload Fusion" from your Deck to your hand, also any monster you Fusion Summon with "Overload Fusion" using 6 or more materials this turn can attack a number of times each Battle Phase this turn up to the number of materials used for its Summon, but you cannot Special Summon monsters for the rest of this turn after this card resolves, except with Spell effects. You can only activate 1 "Evolution Result Burst" per turn.
+    Add 1 "Overload Fusion" from your Deck to your hand. If you Fusion Summon a monster this turn with "Overload Fusion", using 6 or more monsters as material, that monster can attack a number of times each Battle Phase this turn, up to the number of monsters used as its Fusion Materials. For the rest of this turn after this card resolves, you cannot Special Summon monsters, except with Spell effects. You can only activate 1 "Evolution End Burst" per turn.
   de:
   es:
   fr:
