--- a/data/cards/91706817.yaml
+++ b/data/cards/91706817.yaml
@@ -1,7 +1,7 @@
 konami_id: 17264
 password: 91706817
 name:
-  en: Angel with Blue Tears
+  en: Angel of Blue Tears
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 蓝泪天使
 text:
   en: |-
-    Target 1 face-up monster on the field; its controller's opponent takes 200 damage for each card in their hand, then negate that monster's effects until the end of this turn. If either player takes effect damage (except during the Damage Step): You can banish this card from the GY; Set 1 Normal Trap directly from your hand or Deck, and if it was Set from the hand, it can be activated this turn. You can only use 1 "Angel with Blue Tears" effect per turn, and only once that turn.
+    Target 1 face-up monster on the field; its controller's opponent takes damage equal to the number of cards in their hand x 200, then negate that target's effects until the end of this turn. If effect damage is inflicted (except during the Damage Step): You can banish this card from your GY; Set 1 Normal Trap directly from your hand or Deck. If Set from the hand, it can be activated this turn. You can only use 1 "Angel of Blue Tears" effect per turn, and only once that turn.
   de:
   es:
   fr:
