--- a/data/cards/yugipedia910925.yaml
+++ b/data/cards/yugipedia910925.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: プティカの<ruby>蟲<rt>こ</rt></ruby><ruby>惑<rt>わく</rt></ruby><ruby>魔<rt>ま</rt></ruby>
-  ja_romaji: Putica no Kowakuma
+  ja_romaji: Putika no Kowakuma
   ko:
   ko_rr:
   zh-TW:
@@ -33,6 +33,7 @@ atk: 900
 def: 1900
 series:
 - Traptrix
+- Field Searcher
 sets:
   ja:
   - set_number: SD45-JP001
