--- a/data/cards/yugipedia910926.yaml
+++ b/data/cards/yugipedia910926.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your Main Phase, you can Normal Summon 1 "Traptrix" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) The first time each of your Insect and Plant monsters would be destroyed by battle each turn, it is not destroyed. You can banish 1 monster you control; Special Summon 1 "Traptrix" monster from your hand or GY. You can only use this effect of "Traptrix Orchard" once per turn.
+    During your Main Phase, you can Normal Summon 1 "Traptrix" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) The first time each of your Insect and Plant monsters would be destroyed by battle each turn, they are not destroyed. You can banish 1 monster you control; Special Summon 1 "Traptrix" monster from your hand or GY. You can only use this effect of "Traptrix Orchard" once per turn.
   de:
   es:
   fr:
