--- a/data/cards/04599182.yaml
+++ b/data/cards/04599182.yaml
@@ -1,7 +1,7 @@
 konami_id: 17252
 password: 4599182
 name:
-  en: Return of the Reaper
+  en: This Creepy Little Punk
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as an "Infernity" card.)
-    Special Summon 1 of your "Infernity" monsters that is banished, in your hand, or in your GY. If a face-up "Infernity" monster(s) you control is destroyed by battle, or leaves the field because of an opponent's card effect, while this card is in your GY: You can Set this card. You can only use each effect of "Return of the Reaper" once per turn.
+    Special Summon 1 of your "Infernity" monsters that is banished, or in your hand or GY. If a face-up "Infernity" monster(s) you control is destroyed by battle, or leaves the field because of an opponent's card effect, while this card is in your GY: You can Set this card. You can only use each effect of "This Creepy Little Punk" once per turn.
   de:
   es:
   fr:
