--- a/data/cards/06556909.yaml
+++ b/data/cards/06556909.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 真红之魂-真红眼灵魂
 text:
   en: |-
-    This card's name becomes "Red-Eyes Black Dragon" while on the field or in the GY. If your opponent Special Summons a monster(s) (except during the Damage Step): You can send this card from your hand or field to the GY; Special Summon 1 "Red-Eyes" monster from your hand or Deck, except "Red-Eyes Soul". You can only use this effect of "Red-Eyes Soul" once per turn. (Quick Effect): You can target 1 "Red-Eyes Black Dragon" in your Monster Zone; inflict damage to your opponent equal to its original ATK. You can only use this effect of "Red-Eyes Soul" once per Duel.
+    This card's name becomes "Red-Eyes Black Dragon" while on the field or in the GY. If your opponent Special Summons a monster(s) (except during the Damage Step): You can send this card from your hand or field to the GY; Special Summon 1 "Red-Eyes" monster from your hand or Deck, except "Red-Eyes Soul". You can only use this effect of "Red-Eyes Soul" once per turn. (Quick Effect): You can target 1 "Red-Eyes Black Dragon" you control; inflict damage to your opponent equal to that monster's original ATK. You can only use this effect of "Red-Eyes Soul" once per Duel.
   de:
   es:
   fr:
