--- a/data/cards/12527118.yaml
+++ b/data/cards/12527118.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 卡西莫拉尔
 text:
   en: |-
-    When this card is Normal Summoned: You can target 1 face-up monster your opponent controls; it gains ATK equal to its original ATK, and if you do, during the End Phase of the next turn, destroy that monster, and if you do that, your opponent takes damage equal to half its original ATK. At the start of your opponent's Battle Phase: You can Tribute this Normal Summoned/Set card; your opponent's monsters cannot attack directly this turn.
+    When this card is Normal Summoned: You can target 1 face-up monster your opponent controls; it gains ATK equal to its original ATK, also during the End Phase of the next turn, destroy that face-up monster, and if you do, your opponent takes damage equal to half its original ATK. At the start of your opponent's Battle Phase: You can Tribute this Normal Summoned/Set card; your opponent's monsters cannot attack directly for the rest of this turn.
   de:
   es:
   fr:
