--- a/data/cards/19050066.yaml
+++ b/data/cards/19050066.yaml
@@ -1,7 +1,7 @@
 konami_id: 17111
 password: 19050066
 name:
-  en: Performapal BaroKuriboh
+  en: Performapal Barokuriboh
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 娱乐伙伴 巴洛克栗子球
 text:
   en: |-
-    When your monster is destroyed by battle: You can Special Summon this card from your hand. Your opponent's monsters cannot target other monsters for attacks. If this card is attacked, change it to Attack Position at the end of the Damage Step.
+    When your monster is destroyed by battle: You can Special Summon this card from your hand. Your opponent's monsters cannot target monsters for attacks, except this one. If this card is attacked, change it to Attack Position at the end of the Damage Step.
   de:
   es:
   fr:
