--- a/data/cards/27104921.yaml
+++ b/data/cards/27104921.yaml
@@ -1,7 +1,7 @@
 konami_id: 17265
 password: 27104921
 name:
-  en: Prisoner of Destiny
+  en: Forge a New Future
   de:
   es:
   fr:
@@ -15,11 +15,11 @@ name:
   zh-CN: 命运的囚人
 text:
   en: |-
-    Once per Chain, if a Link-4 monster is Link Summoned: You can place 1 counter on this card (max. 3), then you can apply this effect based on the number of counters on this card.
-    ● 1: Declare 1 card name, and if you do, the activated effects and effects on the field of cards with the declared original name are negated this turn.
+    Once per Chain, if a Link-4 monster is Link Summoned: You can place 1 counter on this card (max. 3), then you can apply the following effect based on the number of counters on it.
+    ● 1: Declare 1 card name, and if you do, the activated effects and effects on the field of cards with that original name, are negated this turn.
     ● 2: Special Summon 1 Level 4 or lower monster from your GY.
     ● 3: Send this card to the GY, and if you do, Special Summon 1 Link-4 monster from your Extra Deck.
-    You can only activate 1 "Prisoner of Destiny" per turn.
+    You can only activate 1 "Forge a New Future" per turn.
   de:
   es:
   fr:
