--- a/data/cards/30761649.yaml
+++ b/data/cards/30761649.yaml
@@ -1,7 +1,7 @@
 konami_id: 17256
 password: 30761649
 name:
-  en: Bariantopia
+  en: Barian Untopia
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Barian's" card.)
-    Your opponent cannot target "CXyz" monsters, "Number C" monsters, and "Number" monsters with a number between "101" and "107" in their names you control with card effects, also they cannot be destroyed by your opponent's card effects. Once per turn, if you Special Summon an Xyz Monster with a "Rank-Up-Magic" Spell's effect: You can target that Xyz Monster and 1 monster your opponent controls; attach that opponent's monster to that Xyz Monster as material.
+    "Number" monsters you control with a number between "101" and "107" in their name, as well as "CXyz" monsters and "Number C" monsters you control, cannot be destroyed by your opponent's card effects, and your opponent cannot target them with card effects. Once per turn, if you Special Summon an Xyz Monster with a "Rank-Up-Magic" Spell's effect: You can target that Xyz Monster and 1 monster your opponent controls; attach that opponent's monster to that Xyz Monster as material.
   de:
   es:
   fr:
