--- a/data/cards/30983281.yaml
+++ b/data/cards/30983281.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    If this card is Synchro Summoned: You can Special Summon 1 Level 2 or lower Tuner from your GY. During the Main Phase (Quick Effect): You can Tribute this card; Special Summon 1 "Stardust Dragon" from your Extra Deck (this is treated as a Synchro Summon), then, immediately after this effect resolves, Synchro Summon 1 Synchro Monster using monsters you control as material. This turn, the monsters Synchro Summoned by this effect are unaffected by your opponent's activated effects. You can only use each effect of "Accel Synchro Stardust Dragon" once per turn.
+    If this card is Synchro Summoned: You can Special Summon 1 Level 2 or lower Tuner from your GY. During the Main Phase (Quick Effect): You can Tribute this card; Special Summon 1 "Stardust Dragon" from your Extra Deck (this is treated as a Synchro Summon), then, immediately after this effect resolves, Synchro Summon using monsters you control as material. For the rest of this turn, the monsters Synchro Summoned by this effect are unaffected by your opponent's activated effects. You can only use each effect of "Accel Synchro Stardust Dragon" once per turn.
   de:
   es:
   fr:
