--- a/data/cards/32828466.yaml
+++ b/data/cards/32828466.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 "Elemental HERO" Fusion Monster + 1+ Warrior monsters
-    Must be Fusion Summoned. Gains 300 ATK for each Fusion Material used for its Summon. This card can make a number of attacks on monsters each Battle Phase, up to the number of Fusion Monsters used as Fusion Material for its Summon. If this card battled a monster, after damage calculation: Destroy that monster, and if you do, inflict damage to your opponent equal to its original ATK. If this Fusion Summoned card is destroyed: Special Summon 1 Warrior monster from your hand or Deck.
+    Must be Fusion Summoned. Gains 300 ATK for each material used for its Summon. This card can make a number of attacks on monsters each Battle Phase, up to the number of Fusion Monsters used as material for its Summon. After damage calculation, if this card battled a monster: Destroy that monster, and if you do, inflict damage to your opponent equal to its original ATK. If this Fusion Summoned card is destroyed: Special Summon 1 Warrior monster from your hand or Deck.
   de:
   es:
   fr:
