--- a/data/cards/39049051.yaml
+++ b/data/cards/39049051.yaml
@@ -1,7 +1,7 @@
 konami_id: 17259
 password: 39049051
 name:
-  en: Wonders of Nature
+  en: Kahyoreigetsu
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 歌冰丽月
 text:
   en: |-
-    Special Summon 1 Level 4 or lower Fairy, Spellcaster, Winged Beast, or Beast-Warrior monster from your hand, and if you do, equip it with this card, then you can return all Dragon monsters on the field to the hand. During the End Phase, if this card is in your GY because it was sent there from the Spell & Trap Zone while face-up this turn: You can add 1 "Polymerization" Spell, 1 "Fusion" Spell, or 1 "Fusion Parasite" from your Deck to your hand. You can only use each effect of "Wonders of Nature" once per turn.
+    Special Summon 1 Level 4 or lower Fairy, Spellcaster, Winged Beast, or Beast-Warrior monster from your hand, and if you do, equip it with this card, then you can return all Dragon monsters on the field to the hand. During the End Phase, if this card is in the GY because it was sent there from the Spell & Trap Zone this turn while face-up: You can add 1 "Polymerization" Spell, "Fusion" Spell, or "Fusion Parasite" from your Deck to your hand. You can only use each effect of "Kahyoreigetsu" once per turn.
   de:
   es:
   fr:
