--- a/data/cards/64211118.yaml
+++ b/data/cards/64211118.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3+ Cyberse monsters
-    Negate any opponent's monster effect activated during the Battle Phase. (Quick Effect): You can send 1 Cyberse monster from your Deck or Extra Deck to the GY, and if you do, this card is also treated as the sent monster's Attribute, also it gains 2500 ATK. You can only use this effect of "Firewall Dragon Darkfluid - Neo Tempest Terahertz" once per turn. This card can make a number of attacks on monsters each Battle Phase, up to the number of its Attributes.
+    Negate any monster effects activated by your opponent during the Battle Phase. (Quick Effect): You can send 1 Cyberse monster from your Deck or Extra Deck to the GY, and if you do, this card gains the Attribute of that monster sent to the GY, also it gains 2500 ATK. You can only use this effect of "Firewall Dragon Darkfluid - Neo Tempest Terahertz" once per turn. This card can attack monsters a number of times each Battle Phase, up to the number of different Attributes it has.
   de:
   es:
   fr:
