--- a/data/cards/65433790.yaml
+++ b/data/cards/65433790.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 混战模式-乱入
 text:
   en: |-
-    Activate this card by targeting 1 Effect Monster on the field. The first 2 times that monster would be destroyed by battle each turn, it is not destroyed. When that monster is destroyed by battle, the player that destroyed it gains 2000 LP. If the turn player's opponent takes battle or effect damage: Activate this effect; they can apply the following effect.
-    ● Special Summon 1 Level 4 or lower monster from your hand or Deck, and if you do, you lose 2000 LP.
+    Activate this card by targeting 1 Effect Monster on the field. The first two times that monster would be destroyed by battle each turn, it is not destroyed. When it is destroyed by battle, the player that destroyed it gains 2000 LP. If the turn player's opponent takes battle or effect damage: Activate this effect; that opponent can apply the following effect.
+    ● Special Summon 1 Level 4 or lower monster from your hand or Deck, but lose 2000 LP.
   de:
   es:
   fr:
