--- a/data/cards/75311421.yaml
+++ b/data/cards/75311421.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 波提斯
 text:
   en: |-
-    When this card is Normal Summoned: You can excavate the top 3 cards of your Deck, and if you do, you can banish 1 excavated monster and add 1 other monster with the same name from among the excavated cards or your Deck to your hand, also shuffle the rest back into the Deck. Once per turn, during the End Phase, if this card is in your GY because it was sent there this turn after being Normal Summoned/Set: You can excavate the top 3 cards of your Deck, and if you do, place them on the top of the Deck in any order.
+    When this card is Normal Summoned: You can excavate the top 3 cards of your Deck, and if you do, you can banish 1 excavated monster to add 1 monster with its same name to your hand, from either your Deck or the other excavated cards, also shuffle the rest into the Deck. Once per turn, during the End Phase, if this card is in your GY because it was sent there this turn after being Normal Summoned/Set: You can excavate the top 3 cards of your Deck, and if you do, place them on top of the Deck in any order.
   de:
   es:
   fr:
