--- a/data/cards/91262474.yaml
+++ b/data/cards/91262474.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 星尘亚龙
 text:
   en: |-
-    If this card is in your hand or GY and you control a Level 8 or higher Dragon Synchro Monster: You can Special Summon this card, but banish it when it leaves the field. You can Tribute this card; Special Summon up to 2 Level 1 LIGHT Dragon monsters from your hand and/or GY, except "Stardust Wurm", but they cannot activate their effects. You can only use each effect of "Stardust Wurm" once per turn.
+    If this card is in your hand or GY, and you control a Level 8 or higher Dragon Synchro Monster: You can Special Summon this card, but banish it when it leaves the field. You can Tribute this card; Special Summon up to 2 Level 1 LIGHT Dragon monsters from your hand and/or GY, except "Stardust Wurm", but their effects cannot be activated. You can only use each effect of "Stardust Wurm" once per turn.
   de:
   es:
   fr:
