--- a/data/cards/92428405.yaml
+++ b/data/cards/92428405.yaml
@@ -1,7 +1,7 @@
 konami_id: 17261
 password: 92428405
 name:
-  en: The Supreme King's Soul
+  en: Soul of the Supreme King
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 霸王龙之魂
 text:
   en: |-
-    Pay half your LP; Special Summon 1 "Supreme King Z-ARC" from your Extra Deck, ignoring its Summoning conditions, but its effects are negated, also return it to the Extra Deck during the End Phase of the next turn. When your opponent activates a Spell Card or effect: You can banish this card from your GY and 1 "Supreme King Z-ARC" from your Monster Zone; Special Summon up to 4 monsters from your hand, Deck, Extra Deck, and/or GY (up to 1 each with "Pendulum Dragon", "Xyz Dragon", "Synchro Dragon", and "Fusion Dragon" in their names).
+    Pay half your LP; Special Summon 1 "Supreme King Z-ARC" from your Extra Deck, ignoring its Summoning conditions, but negate its effects. It is returned to the Extra Deck during the End Phase of the next turn. When your opponent activates a Spell Card or effect: You can banish this card from your GY and 1 "Supreme King Z-ARC" from your face-up Monster Zone; Special Summon up to 1 each "Pendulum Dragon", "Xyz Dragon", "Synchro Dragon", and "Fusion Dragon" monsters from your hand, Deck, Extra Deck, and/or GY.
   de:
   es:
   fr:
