--- a/data/cards/92644052.yaml
+++ b/data/cards/92644052.yaml
@@ -1,7 +1,7 @@
 konami_id: 17258
 password: 92644052
 name:
-  en: Performapal Greatest Duelist
+  en: Performapal Duelist Extraordinaire
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card inflicts battle damage to your opponent: You can add 1 "Supreme King Dragon" monster, 1 "Supreme King Gate" monster, or 1 "The Supreme King's Soul" from your Deck to your hand. Once per turn, during each Standby Phase: Activate this effect; each player can banish 1 Spell from their Deck. Once per turn, if a monster declares an attack: Activate this effect; the attacked player can apply this effect.
+    When this card inflicts battle damage to your opponent: You can add 1 "Supreme King Dragon" monster, "Supreme King Gate" monster, or "Soul of the Supreme King" from your Deck to your hand. Once per turn, during the Standby Phase: Activate this effect; each player can banish 1 Spell from their Deck. Once per turn, when a monster declares an attack: Activate this effect; the attacked player can apply the following effect.
     ● Add 1 of your banished Spells to your hand, then discard it, and if you do, negate that attack.
   de:
   es:
@@ -37,7 +37,7 @@ def: 400
 pendulum_scale: 8
 pendulum_effect:
   en: |-
-    Once per turn, at the start of the Damage Step, if a monster battles another monster: You can return this card to the hand, and if you do, banish 1 Spell from your Deck, also your monster cannot be destroyed by that battle, also the battle damage you take from it is halved.
+    Once per turn, at the start of the Damage Step, if a monster battles a monster: You can return this card to the hand, and if you do, banish 1 Spell from your Deck. For that battle, your monster cannot be destroyed, also the battle damage you take is halved.
   de:
   es:
   fr:
