--- a/data/cards/93777634.yaml
+++ b/data/cards/93777634.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    If this card is Special Summoned: You can target 1 "Number" Xyz Monster in your GY, except "Number 39: Utopia Rising"; Special Summon it in Defense Position, then you can transfer this card's materials to that monster. If you Xyz Summon: You can Special Summon this card from your GY, but banish it when it leaves the field. You can only use each effect of "Number 39: Utopia Rising" once per turn.
+    If this card is Special Summoned: You can target 1 "Number" Xyz Monster in your GY, except "Number 39: Utopia Rising"; Special Summon it in Defense Position, then you can detach all materials from this card and attach them to that monster. If you Xyz Summon (except during the Damage Step): You can Special Summon this card from your GY, but banish it when it leaves the field. You can only use each effect of "Number 39: Utopia Rising" once per turn.
   de:
   es:
   fr:
