--- a/data/cards/05498296.yaml
+++ b/data/cards/05498296.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>斥<rt>せっ</rt></ruby><ruby>候<rt>こう</rt></ruby> スカー
   ja_romaji: Ankokukai no Sekkō Sukā
   ko: 암흑계의 척후 스카아
-  ko_rr:
+  ko_rr: Amheukgye-ui Cheokhu Seukaa
   zh-TW: 暗黑界之斥侯 猩紅卡
   zh-CN: 暗黑界的斥候 斯卡
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが戦闘で破壊され墓地へ送られた場合に発動する。デッキからレベル４以下の「暗黒界」モンスター１体を手札に加える。
   ko: |-
-    이 카드가 전투에 의해서 파괴되어 묘지로 보내졌을 때, 자신의 덱에서 레벨 4 이하의 "암흑계"라는 이름이 붙은 몬스터 1장을 패에 넣는다.
+    ①: 이 카드가 전투로 파괴되어 묘지로 보내졌을 경우에 발동한다. 덱에서 레벨 4 이하의 "암흑계" 몬스터 1장을 패에 넣는다.
   zh-TW: |-
     此卡因战斗被破坏并送入墓地时，从我方牌组中将1只等级4或以下冠有「暗黑界」之名的怪兽加入手牌。
   zh-CN: |-
