--- a/data/cards/39552584.yaml
+++ b/data/cards/39552584.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>龍<rt>りゅう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>王<rt>おう</rt></ruby> グラファ
   ja_romaji: Ankokukai no Ryūshin'ō Gurafa
-  ko:
-  ko_rr:
+  ko: 암흑계의 용신왕 그라파
+  ko_rr: Amheukgye-ui Yongsinwang Geurapa
   zh-TW:
   zh-CN: 暗黑界的龙神王 墨
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     「暗黒界の龍神 グラファ」＋闇属性モンスター
     このカード名の①の効果は１ターンに１度しか使用できない。①：相手がモンスターの効果・通常魔法・通常罠カードを発動した時に発動できる。その効果は「相手は自身の手札を１枚選んで捨てる」となる。②：融合召喚したこのカードが相手によってフィールドから離れた場合に発動できる。自分の墓地のモンスター及び除外されている自分のモンスターの中から、「暗黒界の龍神 グラファ」１体を選んで特殊召喚する。その後、手札があるプレイヤーは自身の手札を１枚選んで捨てる。
-  ko:
+  ko: |-
+    "암흑계의 용신 그라파" ＋ 어둠 속성 몬스터
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대가 몬스터의 효과 / 일반 마법 / 일반 함정 카드를 발동했을 때에 발동할 수 있다. 그 효과는 "상대는 자신의 패를 1장 고르고 버린다"가 된다. ②: 융합 소환한 이 카드가 상대에 의해 필드에서 벗어났을 경우에 발동할 수 있다. 자신 묘지의 몬스터 및 제외되어 있는 자신의 몬스터 중에서, "암흑계의 용신 그라파" 1장을 고르고 특수 소환한다. 그 후, 패가 있는 플레이어는 자신의 패를 1장 고르고 버린다.
   zh-TW:
   zh-CN: |-
     「暗黒界の龍神 グラファ／暗黑界的龙神 墨」+暗属性怪兽
