--- a/data/cards/84243274.yaml
+++ b/data/cards/84243274.yaml
@@ -8,7 +8,7 @@ name:
   it: VWXYZ-Cannone Drago Catapulta
   pt: VWXYZ-Dragão Catapulta Canhão
   ja: <ruby>ＶＷＸＹＺ<rt>ヴィトゥズィ</rt></ruby>－ドラゴン・カタパルトキャノン
-  ja_romaji: Vi tu Zi - Doragon Kataparuto Kyanon
+  ja_romaji: Vi Tu Zi - Doragon Kataparuto Kyanon
   ko: VWXYZ－드래곤 캐터펄트 캐논
   ko_rr:
   zh-TW:
