--- a/data/cards/85325774.yaml
+++ b/data/cards/85325774.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>援<rt>えん</rt></ruby><ruby>軍<rt>ぐん</rt></ruby>
   ja_romaji: Ankokukai no Engun
   ko: 암흑계의 원군
-  ko_rr:
+  ko_rr: Amheukgye-ui Wongun
   zh-TW:
   zh-CN: 暗黑界的援军
 text:
