--- a/data/cards/03167439.yaml
+++ b/data/cards/03167439.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>懲<rt>ちょう</rt></ruby><ruby>罰<rt>ばつ</rt></ruby>
   ja_romaji: Ankokukai no Chōbatsu
-  ko:
-  ko_rr:
+  ko: 암흑계의 징벌
+  ko_rr: Amheukgye-ui Jingbeol
   zh-TW:
   zh-CN: 暗黑界的惩罚
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分または相手がモンスターを召喚・特殊召喚する際に発動できる。それを無効にし、そのモンスターを破壊する。その後、手札から悪魔族モンスター１体を選んで捨てる。②：自分フィールドの「暗黒界」モンスターが戦闘または相手の効果で破壊される場合、代わりに墓地のこのカードを除外できる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 또는 상대가 몬스터를 일반 소환 / 특수 소환할 시기에 발동할 수 있다. 그것을 무효로 하고, 그 몬스터를 파괴한다. 그 후, 패에서 악마족 몬스터 1장을 고르고 버린다. ②: 자신 필드의 "암흑계" 몬스터가 전투 또는 상대 효과로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己或者对手召唤或特殊召唤怪兽之际可以发动。使其无效，将那些怪兽破坏。那之后，从手牌选1只恶魔族怪兽舍弃。②：自己场上的「暗黒界／暗黑界」怪兽要被战斗或者对手的效果破坏的场合，可以将墓地的这张卡除外作为代替。
