--- a/data/cards/07623640.yaml
+++ b/data/cards/07623640.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>導<rt>どう</rt></ruby><ruby>師<rt>し</rt></ruby> セルリ
   ja_romaji: Ankokukai no Dōshi Seruri
   ko: 암흑계의 도사 세루리
-  ko_rr:
+  ko_rr: Amheukgye-ui Dosa Seruri
   zh-TW: 暗黑界之導師 藍爾利
   zh-CN: 暗黑界的导师 塞鲁利
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。このカードを相手フィールドに守備表示で特殊召喚する。②：このカードが「暗黒界」カードの効果で特殊召喚に成功した場合に発動する。相手は自身の手札を１枚選んで捨てる。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 상대 필드 위에 앞면 수비 표시로 특수 소환한다. 이 카드가 "암흑계"라는 이름이 붙은 카드의 효과에 의해서 특수 소환에 성공했을 때, 상대는 패를 1장 선택하고 버린다.
+    ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우에 발동한다. 이 카드를 상대 필드에 수비 표시로 특수 소환한다. ②: 이 카드가 "암흑계" 카드의 효과로 특수 소환에 성공했을 경우에 발동한다. 상대는 자신의 패를 1장 고르고 버린다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，以表侧守备表示特殊召唤此卡至对手场上。此卡因冠有「暗黑界」之名卡牌的卡牌效果特殊召唤成功时，对手挑选1张手牌舍弃。
   zh-CN: |-
