--- a/data/cards/10131855.yaml
+++ b/data/cards/10131855.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>洗<rt>せん</rt></ruby><ruby>脳<rt>のう</rt></ruby>
   ja_romaji: Ankokukai no Sennō
   ko: 암흑계의 세뇌
-  ko_rr:
+  ko_rr: Amheukgye-ui Segoe
   zh-TW:
   zh-CN: 暗黑界的洗脑
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の手札が３枚以上存在し、相手がモンスターの効果を発動した時、フィールドの「暗黒界」モンスター１体を対象としてこの効果を発動できる。対象のモンスターを持ち主の手札に戻し、その相手の効果は「相手の手札をランダムに１枚選んで捨てる」となる。
   ko: |-
-    ①: 자신의 패가 3장 이상 존재하고, 상대 몬스터의 효과가 발동했을 때, 필드의 "암흑계" 몬스터 1장을 대상으로 하여 이 효과를 발동할 수 있다. 대상 몬스터를 주인의 패로 되돌리고, 그 상대 효과는 "상대의 패를 무작위로 1장 고르고 버린다"가 된다.
+    ①: 자신의 패가 3장 이상 존재하고, 상대가 몬스터의 효과를 발동했을 때, 필드의 "암흑계" 몬스터 1장을 대상으로 하여 이 효과를 발동할 수 있다. 대상 몬스터를 주인의 패로 되돌리고, 그 상대 효과는 "상대의 패를 무작위로 1장 고르고 버린다"가 된다.
   zh-TW:
   zh-CN: |-
     ①：自己手卡有3张以上存在，对方怪兽的效果发动时，以场上1只「暗黑界」怪兽为对象才能把这个效果发动。作为对象的怪兽回到持有者手卡，那个对方的效果变成「对方手卡随机选1张丢弃」。
