--- a/data/cards/14386013.yaml
+++ b/data/cards/14386013.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札を１枚捨てて発動できる。自分のデッキ・墓地から「ウィジャ盤」１枚または悪魔族・レベル８モンスター１体を選んで手札に加える。②：墓地のこのカードを除外して発動できる。自分の手札・墓地の「ウィジャ盤」及び「死のメッセージ」カードの中から、任意の数だけ選び（同名カードは１枚まで）、好きな順番でデッキの下に戻す。その後、戻した数だけ自分はデッキからドローする。この効果はこのカードが墓地へ送られたターンには発動できない。
   ko: |-
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 자신의 덱 / 묘지에서 "위저 보드" 1장 또는 악마족 / 레벨 8 몬스터 1장을 골라 패에 넣는다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 묘지의 "위저 보드" 및 "죽음의 메시지" 카드 중에서, 임의의 수만큼 고르고(같은 이름의 카드는 1장까지), 좋아하는 순서대로 덱 맨 아래로 되돌린다. 그 후, 되돌린 수만큼 자신은 덱에서 드로우한다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 자신의 덱 / 묘지에서 "위저 보드" 1장 또는 악마족 / 레벨 8 몬스터 1장을 고르고 패에 넣는다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 묘지의 "위저 보드" 및 "죽음의 메시지" 카드 중에서, 임의의 수만큼 고르고(같은 이름의 카드는 1장까지), 좋아하는 순서대로 덱 아래로 되돌린다. 그 후, 되돌린 수만큼 자신은 덱에서 드로우한다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
