--- a/data/cards/15800838.yaml
+++ b/data/cards/15800838.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：カード名を１つ宣言して発動できる。宣言したカードが相手の手札にある場合、相手は手札のそのカードを全て捨てる。宣言したカードが相手の手札に無い場合、自分の手札をランダムに１枚選んで捨てる。
   ko: |-
-    ①: 카드명을 1개 선언하고 발동할 수 있다. 선언한 카드가 상대의 패에 있을 경우, 상대는 패의 그 카드를 전부 버린다. 선언한 카드가 상대의 패에 없을 경우, 자신은 패를 무작위로 1장 골라 버린다.
+    ①: 카드명을 1개 선언하고 발동할 수 있다. 선언한 카드가 상대의 패에 있을 경우, 상대는 패의 그 카드를 전부 버린다. 선언한 카드가 상대의 패에 없을 경우, 자신의 패를 무작위로 1장 고르고 버린다.
   zh-TW: |-
     可宣言1张卡牌名称并发动。对手手牌中有被宣言卡牌的场合，对手将该卡牌全部舍弃至墓地。对手手牌中没有被宣言卡牌的场合，随机舍弃1张我方手牌。
   zh-CN: |-
