--- a/data/cards/25847467.yaml
+++ b/data/cards/25847467.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>刺<rt>し</rt></ruby><ruby>客<rt>かく</rt></ruby> カーキ
   ja_romaji: Ankokukai no Shikaku Kāki
   ko: 암흑계의 자객 카키
-  ko_rr:
+  ko_rr: Amheukgye-ui Jagaek Kaki
   zh-TW: 暗黑界之刺客 土黃其
   zh-CN: 暗黑界的刺客 卡其
 text:
@@ -28,7 +28,7 @@ text:
   ja: |-
     ①：このカードが効果で手札から墓地へ捨てられた場合、フィールドのモンスター１体を対象として発動する。そのモンスターを破壊する。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 필드 위의 몬스터 1장을 선택하고 파괴한다.
+    ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동한다. 그 몬스터를 파괴한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，选择场上的1只怪兽破坏。
   zh-CN: |-
