--- a/data/cards/29826127.yaml
+++ b/data/cards/29826127.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby>よりの<ruby>軍<rt>ぐん</rt></ruby><ruby>勢<rt>ぜい</rt></ruby>
   ja_romaji: Ankoku yori no Gunzei
   ko: 암흑에서 온 군세
-  ko_rr:
+  ko_rr: Amheuk-eseo On Gunse
   zh-TW: 來自暗黑的軍勢
   zh-CN: 来自暗黑的军势
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の墓地の「暗黒界」モンスター２体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
-    자신의 묘지에 존재하는 "암흑계"라는 이름이 붙은 몬스터 2장을 선택하고 패로 되돌린다.
+    ①: 자신 묘지의 "암흑계" 몬스터 2장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW: |-
     从我方墓地选择2只冠有「暗黑界」之名的怪兽返回手牌。
   zh-CN: |-
