--- a/data/cards/30284022.yaml
+++ b/data/cards/30284022.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>傀<rt>かい</rt></ruby><ruby>儡<rt>らい</rt></ruby>
   ja_romaji: Ankokukai no Kairai
-  ko:
-  ko_rr:
+  ko: 암흑계의 괴뢰
+  ko_rr: Amheukgye-ui Goegwi
   zh-TW:
   zh-CN: 暗黑界的傀儡
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：お互いの墓地のカードを合計３枚まで対象として発動できる。そのカードを除外する。その後、手札から悪魔族モンスター１体を選んで捨てる。②：自分メインフェイズに墓地のこのカードを除外し、除外されている自分の悪魔族モンスター１体を対象として発動できる。そのモンスターを手札に加える。この効果はこのカードが墓地へ送られたターンには発動できない。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 서로의 묘지의 카드를 합계 3장까지 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. 그 후, 패에서 악마족 몬스터 1장을 고르고 버린다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고, 제외되어 있는 자신의 악마족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣는다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以以双方墓地的卡合计最多3张为对象发动。将那些卡除外。那之后，从手牌选1只恶魔族怪兽舍弃。②：自己的主要阶段可以将墓地的这张卡除外，以除外中的1只自己的恶魔族怪兽为对象发动。将那只怪兽加入手牌。这个效果在这张卡送入墓地的回合不能发动。
