--- a/data/cards/32619583.yaml
+++ b/data/cards/32619583.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>軍<rt>ぐん</rt></ruby><ruby>神<rt>しん</rt></ruby> シルバ
   ja_romaji: Ankokukai no Gunshin Shiruba
   ko: 암흑계의 군신 실바
-  ko_rr:
+  ko_rr: Amheukgye-ui Gunsin Silba
   zh-TW: 暗黑界之軍神 銀魯巴
   zh-CN: 暗黑界的军神 希尔瓦
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。このカードを特殊召喚する。相手の効果で捨てられた場合、さらに相手は自身の手札を２枚選んで好きな順番でデッキの下に戻す。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 묘지에서 특수 소환한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대는 패를 2장 선택하고, 좋아하는 순서대로 덱의 맨 아래로 되돌린다.
+    ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우에 발동한다. 이 카드를 특수 소환한다. 상대 효과로 버려졌을 경우, 추가로 상대는 자신의 패를 2장 고르고 좋아하는 순서대로 덱 아래로 되돌린다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从墓地特殊召唤此卡。因对手卡牌效果被舍弃的场合，对手另挑选2张手牌并按照喜好顺序返回至牌组下方。
   zh-CN: |-
