--- a/data/cards/33731070.yaml
+++ b/data/cards/33731070.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>尖<rt>せん</rt></ruby><ruby>兵<rt>ぺい</rt></ruby> ベージ
   ja_romaji: Ankokukai no Senpei Bēji
   ko: 암흑계의 첨병 베이지
-  ko_rr:
+  ko_rr: Amheukgye-ui Cheombyeong Beiji
   zh-TW: 暗黑界之尖兵 米黃吉
   zh-CN: 暗黑界的尖兵 贝基
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。このカードを特殊召喚する。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 이 카드를 묘지에서 특수 소환한다.
+    ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우에 발동한다. 이 카드를 특수 소환한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从墓地特殊召唤此卡。
   zh-CN: |-
