--- a/data/cards/34230233.yaml
+++ b/data/cards/34230233.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>龍<rt>りゅう</rt></ruby><ruby>神<rt>しん</rt></ruby> グラファ
   ja_romaji: Ankokukai no Ryūshin Gurafa
   ko: 암흑계의 용신 그라파
-  ko_rr:
+  ko_rr: Amheukgye-ui Yongsin Geurapa
   zh-TW: 暗黑界之龍神 黑拉法
   zh-CN: 暗黑界的龙神 格拉法
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードは「暗黒界の龍神 グラファ」以外の自分フィールドの「暗黒界」モンスター１体を持ち主の手札に戻し、墓地から特殊召喚できる。②：このカードが効果で手札から墓地へ捨てられた場合、相手フィールドのカード１枚を対象として発動する。その相手のカードを破壊する。相手の効果で捨てられた場合、さらに相手の手札をランダムに１枚選んで確認する。それがモンスターだった場合、そのモンスターを自分フィールドに特殊召喚できる。
   ko: |-
-    이 카드는 "암흑계의 용신 그라파" 이외의 자신 필드 위에 앞면 표시로 존재하는 "암흑계"라는 이름이 붙은 몬스터 1장을 패로 되돌리고, 묘지에서 특수 소환할 수 있다. 이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 상대 필드 위에 존재하는 카드 1장을 선택하고 파괴한다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대의 패를 무작위로 1장 확인한다. 확인한 카드가 몬스터였을 경우, 그 몬스터를 자신 필드 위에 특수 소환할 수 있다.
+    ①: 이 카드는 "암흑계의 용신 그라파" 이외의 자신 필드의 "암흑계" 몬스터 1장을 주인의 패로 되돌리고, 묘지에서 특수 소환할 수 있다. ②: 이 카드가 효과로 패에서 묘지로 버려졌을 경우, 상대 필드의 카드 1장을 대상으로 하고 발동한다. 그 상대의 카드를 파괴한다. 상대 효과로 버려졌을 경우, 추가로 상대의 패를 무작위로 1장 고르고 확인한다. 그것이 몬스터였을 경우, 그 몬스터를 자신 필드에 특수 소환할 수 있다.
   zh-TW: |-
     此卡可将除「暗黑界之龍神 黑拉法」以外，我方场上以表侧表示存在的1只冠有「暗黑界」之名的怪兽返回至手牌，并从墓地特殊召唤。此卡因卡牌效果从手牌被舍弃至墓地的场合，选择对手场上的1张卡牌破坏。因对手的卡牌效果被舍弃的场合，另随机确认对手的1张手牌。确认的卡牌为怪兽的场合，可将该怪兽特殊召唤至我方场上。
   zh-CN: |-
