--- a/data/cards/41406613.yaml
+++ b/data/cards/41406613.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>王<rt>おう</rt></ruby> レイン
   ja_romaji: Ankokukai no Mashin'ō Rein
-  ko:
-  ko_rr:
+  ko: 암흑계의 마신왕 레인
+  ko_rr: Amheukgye-ui Masinwang Rein
   zh-TW:
   zh-CN: 暗黑界的魔神王 虹
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：このカードは自分フィールドのレベル７以下の「暗黒界」モンスター１体を持ち主の手札に戻し、墓地から特殊召喚できる。②：このカードが効果で手札から墓地へ捨てられた場合に発動できる。デッキから「暗黒界の魔神王 レイン」以外のレベル５以上の「暗黒界」モンスター１体を手札に加える。相手の効果で捨てられた場合、さらに自分のデッキ・墓地からレベル４以下の「暗黒界」モンスター１体を選んで自分または相手フィールドに特殊召喚できる。
-  ko:
+  ko: |-
+    ①: 이 카드는 자신 필드의 레벨 7 이하의 "암흑계" 몬스터 1장을 주인의 패로 되돌리고, 묘지에서 특수 소환할 수 있다. ②: 이 카드가 효과로 패에서 묘지로 버려졌을 경우에 발동할 수 있다. 덱에서 "암흑계의 마신왕 레인" 이외의 레벨 5 이상의 "암흑계" 몬스터 1장을 패에 넣는다. 상대 효과로 버려졌을 경우, 추가로 자신의 덱 / 묘지에서 레벨 4 이하의 "암흑계" 몬스터 1장을 고르고 자신 또는 상대 필드에 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：这张卡可以使自己场上的1只等级7以下的「暗黒界／暗黑界」怪兽返回持有者的手牌来从墓地特殊召唤。②：这张卡被效果从手牌舍弃入墓地的场合可以发动。从卡组将1只「暗黒界の魔神王 レイン／暗黑界的魔神王 虹」以外的等级5以上的「暗黒界／暗黑界」怪兽加入手牌。是被对手的效果舍弃的场合，可以再从自己的卡组或墓地选1只等级4以下的「暗黒界／暗黑界」怪兽特殊召唤到自己或者对手的场上。
