--- a/data/cards/51232472.yaml
+++ b/data/cards/51232472.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>策<rt>さく</rt></ruby><ruby>士<rt>し</rt></ruby> グリン
   ja_romaji: Ankokukai no Sakushi Gurin
   ko: 암흑계의 책사 그린
-  ko_rr:
+  ko_rr: Amheukgye-ui Chaeksa Geurin
   zh-TW: 暗黑界之策士 綠古林
   zh-CN: 暗黑界的策士 格林
 text:
@@ -28,7 +28,7 @@ text:
   ja: |-
     ①：このカードが効果で手札から墓地へ捨てられた場合、フィールドの魔法・罠カード１枚を対象として発動する。そのカードを破壊する。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 필드 위의 마법 / 함정 카드 1장을 선택하고 파괴한다.
+    ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우, 필드의 마법 / 함정 카드 1장을 대상으로 하고 발동한다. 그 카드를 파괴한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，选择场上的1张魔法、陷阱卡破坏。
   zh-CN: |-
