--- a/data/cards/60228941.yaml
+++ b/data/cards/60228941.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>術<rt>じゅつ</rt></ruby><ruby>師<rt>し</rt></ruby> スノウ
   ja_romaji: Ankokukai no Jutsushi Sunō
   ko: 암흑계의 술사 스노우
-  ko_rr:
+  ko_rr: Amheukgye-ui Sulsa Seunou
   zh-TW: 暗黑界之術師 白諾
   zh-CN: 暗黑界的术师 丝诺
 text:
@@ -30,7 +30,7 @@ text:
     ①：このカードが効果で手札から墓地へ捨てられた場合に発動する。デッキから「暗黒界」カード１枚を手札に加える。相手の効果で捨てられた場合、発動時に相手の墓地のモンスター１体を対象にできる。その場合、さらに以下の効果を適用する。
     ●対象のモンスターを自分フィールドに守備表示で特殊召喚する。
   ko: |-
-    이 카드가 카드의 효과에 의해서 패에서 묘지에 버려졌을 경우, 자신의 덱에서 "암흑계"라는 이름이 붙은 카드 1장을 패에 넣는다. 상대 카드의 효과에 의해서 버려졌을 경우, 다시 상대의 묘지에 존재하는 몬스터 1장을 선택하고, 자신 필드 위에 앞면 수비 표시로 특수 소환할 수 있다.
+    ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우에 발동한다. 덱에서 "암흑계" 카드 1장을 패에 넣는다. 상대 효과로 버려졌을 경우, 발동시에 상대 묘지의 몬스터 1장을 대상으로 할 수 있다. 그 경우, 추가로 이하의 효과를 적용한다. ●대상의 몬스터를 자신 필드에 수비 표시로 특수 소환한다.
   zh-TW: |-
     此卡因卡牌效果从手牌被舍弃至墓地的场合，从我方牌组中将1张冠有「暗黑界」之名的卡牌加入手牌。因对手卡牌效果被舍弃的场合，可另选择对手墓地中的1只怪兽，以表侧守备表示特殊召唤至我方场上。
   zh-CN: |-
