--- a/data/cards/60606759.yaml
+++ b/data/cards/60606759.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>番<rt>ばん</rt></ruby><ruby>兵<rt>ぺい</rt></ruby> レンジ
   ja_romaji: Ankokukai no Banpei Renji
   ko: 암흑계의 파수병 렌지
-  ko_rr:
+  ko_rr: Amheukgye-ui Pasubyeong Renji
   zh-TW: 暗黑界之番兵 橙黃
   zh-CN: 暗黑界的番兵 兰治
 text:
