--- a/data/cards/65956182.yaml
+++ b/data/cards/65956182.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>登<rt>とう</rt></ruby><ruby>極<rt>きょく</rt></ruby>
   ja_romaji: Ankokukai no Tōkyoku
-  ko:
-  ko_rr:
+  ko: 암흑계의 등극
+  ko_rr: Amheukgye-ui Deunggeuk
   zh-TW:
   zh-CN: 暗黑界的登极
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：お互いのメインフェイズに発動できる。自分のフィールド・墓地から、悪魔族の融合モンスターカードによって決められた融合素材モンスターを除外し、その融合モンスター１体をＥＸデッキから融合召喚する。「暗黒界」モンスターを融合召喚する場合、手札のモンスターを捨てて融合素材とする事もできる。②：このカードが墓地に存在する場合、自分メインフェイズに発動できる。このカードを手札に加える。その後、手札から「暗黒界」モンスター１体を選んで捨てる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 서로의 메인 페이즈에 발동할 수 있다. 자신의 필드 / 묘지에서, 악마족 융합 몬스터 카드에 기재된 융합 소재 몬스터를 제외하고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. "암흑계" 몬스터를 융합 소환할 경우, 패의 몬스터를 버리고 융합 소재로 할 수도 있다. ②: 이 카드가 묘지에 존재할 경우, 자신 메인 페이즈에 발동할 수 있다. 이 카드를 패에 넣는다. 그 후, 패에서 "암흑계" 몬스터 1장을 고르고 버린다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：双方的主要阶段可以发动。从自己的场上或墓地将恶魔族的融合怪兽卡规定的融合素材怪兽除外，从额外卡组融合召唤那1只融合怪兽。是要融合召唤「暗黒界／暗黑界」怪兽的场合，也能将手牌的怪兽舍弃来作为融合素材。②：这张卡在墓地存在的场合，自己的主要阶段可以发动。将这张卡加入手牌。那之后，从手牌选1只「暗黒界／暗黑界」怪兽舍弃。
