--- a/data/cards/76672730.yaml
+++ b/data/cards/76672730.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>文<rt>ふみ</rt></ruby><ruby>殿<rt>どの</rt></ruby>
   ja_romaji: Ankokukai no Fumidono
-  ko:
-  ko_rr:
+  ko: 암흑계의 문전
+  ko_rr: Amheukgye-ui Munjeon
   zh-TW:
   zh-CN: 暗黑界的文殿
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。手札から「暗黒界」モンスター１体を選んで捨て、自分フィールドの全ての「暗黒界」モンスターの攻撃力はターン終了時までこの効果で捨てたモンスターのレベル×１００アップする。②：元々の種族が悪魔族のモンスターが「暗黒界」カードの効果または相手の効果で自分の手札から捨てられた場合に発動できる（ダメージステップでも発動可能）。自分の手札を１枚選んで捨てる。その後、自分はデッキから２枚ドローする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 패에서 "암흑계" 몬스터 1장을 골라 버리고, 자신 필드의 모든 "암흑계" 몬스터의 공격력은 턴 종료시까지 이 효과로 버린 몬스터의 레벨 × 100 올린다. ②: 원래의 종족이 악마족인 몬스터가 "암흑계" 카드의 효과 또는 상대 효과로 자신의 패에서 버려졌을 경우에 발동할 수 있다(데미지 스텝에도 발동 가능). 자신의 패를 1장 고르고 버린다. 그 후, 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以发动。从手牌选1只「暗黒界／暗黑界」怪兽舍弃，自己场上的全部「暗黒界／暗黑界」怪兽的攻击力直到回合结束时上升被这个效果舍弃的怪兽的等级×100。②：原种族为恶魔族的怪兽被「暗黒界／暗黑界」卡的效果或者对手的效果从自己的手牌舍弃的场合可以发动（伤害步骤也可发动）。选1张自己的手牌舍弃。那之后，自己从卡组抽2张。
