--- a/data/cards/77895328.yaml
+++ b/data/cards/77895328.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>門<rt>もん</rt></ruby><ruby>番<rt>ばん</rt></ruby> ゼンタ
   ja_romaji: Ankokukai no Monban Zenta
-  ko:
-  ko_rr:
+  ko: 암흑계의 문지기 젠타
+  ko_rr: Amheukgye-ui Munjigi Jenta
   zh-TW:
   zh-CN: 暗黑界的门卫 品红
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     自分は「暗黒界の門番 ゼンタ」を１ターンに１度しか特殊召喚できない。①：このカードを手札から墓地へ捨てて発動できる。デッキから「暗黒界の門」１枚を手札に加える。②：このカードが除外された場合、自分フィールドに「暗黒界」カードが存在していれば発動できる。このカードを特殊召喚する。
-  ko:
+  ko: |-
+    자신은 "암흑계의 문지기 젠타"를 1턴에 1번밖에 특수 소환할 수 없다. ①: 이 카드를 패에서 묘지로 버리고 발동할 수 있다. 덱에서 "암흑계의 문" 1장을 패에 넣는다. ②: 이 카드가 제외되었을 경우, 자신 필드에 "암흑계" 카드가 존재하고 있으면 발동할 수 있다. 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     自己1回合只能特殊召唤1次「暗黒界の門番 ゼンタ／暗黑界的门卫 品红」。①：可以将这张卡从手牌舍弃发动。从卡组将1张「暗黒界の門／暗黑界之门」加入手牌。②：这张卡被除外的场合，若自己场上有「暗黒界／暗黑界」卡存在则可以发动。将这张卡特殊召唤。
