--- a/data/cards/84478195.yaml
+++ b/data/cards/84478195.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>深<rt>しん</rt></ruby><ruby>淵<rt>えん</rt></ruby>の<ruby>結<rt>けっ</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>像<rt>ぞう</rt></ruby>
   ja_romaji: Shin'en no Kekkaizō
   ko: 심연의 결계상
-  ko_rr:
+  ko_rr: Simyeon-ui Gyelgyesang
   zh-TW:
   zh-CN: 深渊之结界像
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードがモンスターゾーンに存在する限り、お互いは闇属性モンスターしか特殊召喚できない。
   ko: |-
-    이 카드가 필드 위에 앞면 표시로 존재하는 한, 서로 어둠 속성 이외의 몬스터를 특수 소환할 수 없다.
+    ①: 이 카드가 몬스터 존에 존재하는 한, 양쪽 플레이어는 어둠 속성 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     只要这张卡在场上表侧表示存在，双方不能把暗属性以外的怪兽特殊召唤。
