--- a/data/cards/07902349.yaml
+++ b/data/cards/07902349.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: The Lost Art Promotion E
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN105
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   - set_number: LOB-123
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -136,6 +140,10 @@ sets:
     set_name: The Lost Art Promotion E
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE105
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: LDD-F100
     set_name: Legend of Blue Eyes White Dragon
@@ -169,6 +177,10 @@ sets:
     set_name: The Lost Art Promotion E
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR105
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: LDD-I100
     set_name: Legend of Blue Eyes White Dragon
@@ -202,6 +214,10 @@ sets:
     set_name: The Lost Art Promotion E
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT105
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: LDB-P123
     set_name: Legend of Blue Eyes White Dragon
@@ -223,6 +239,10 @@ sets:
     set_name: The Lost Art Promotion E
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT105
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: ''
     set_name: 'Yu-Gi-Oh! Duel Monsters II: Dark duel Stories Game Guide 2 promotional card'
