--- a/data/cards/12989604.yaml
+++ b/data/cards/12989604.yaml
@@ -8,7 +8,7 @@ name:
   it: Risveglio Eredità del Mondo
   pt: Despertar do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>からの<ruby>目<rt>め</rt></ruby><ruby>醒<rt>ざ</rt></ruby>め
-  ja_romaji: Sei'ibutsu kara no Mezame
+  ja_romaji: Seiibutsu kara no Mezame
   ko: 성유물로부터의 자각
   ko_rr: Seong-yumullobuteo-ui Jagak
   zh-TW:
