--- a/data/cards/14604710.yaml
+++ b/data/cards/14604710.yaml
@@ -8,7 +8,7 @@ name:
   it: Mostruosità dell'Eredità del Mondo
   pt: Monstruosidade do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>胎<rt>たい</rt></ruby><ruby>導<rt>どう</rt></ruby>
-  ja_romaji: Sei'ibutsu no Taidō
+  ja_romaji: Seiibutsu no Taidō
   ko: 성유물의 태도
   ko_rr: Seong-yumul-ui Taedo
   zh-TW:
