--- a/data/cards/35183584.yaml
+++ b/data/cards/35183584.yaml
@@ -8,7 +8,7 @@ name:
   it: Mardark Guardrago Eredità del Mondo
   pt: Mardark, o Dragão-Guarda do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>メロダーク
-  ja_romaji: Sei'ibutsu no Shugoryū Merodāku
+  ja_romaji: Seiibutsu no Shugoryū Merodāku
   ko: 성유물의 수호룡 멜로다크
   ko_rr: Seong-yumul-ui Suhoryong Mellodakeu
   zh-TW:
