--- a/data/cards/36197902.yaml
+++ b/data/cards/36197902.yaml
@@ -8,7 +8,7 @@ name:
   it: Crollo Eredità del Mondo
   pt: Colapso do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>齎<rt>もたら</rt></ruby>す<ruby>崩<rt>ほう</rt></ruby><ruby>界<rt>かい</rt></ruby>
-  ja_romaji: Sei'ibutsu no Motarasu Hōkai
+  ja_romaji: Seiibutsu no Motarasu Hōkai
   ko: 성유물이 초래한 붕괴
   ko_rr: Seong-yumul-i Gajyeoo-neun Bunggye
   zh-TW:
