--- a/data/cards/40441990.yaml
+++ b/data/cards/40441990.yaml
@@ -8,7 +8,7 @@ name:
   it: Eredità del Mondo - "Chiave del Mondo"
   pt: Legado Mundial - "Chave Mundial"
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>－『<ruby>星<rt>せい</rt></ruby><ruby>鍵<rt>けん</rt></ruby>』
-  ja_romaji: Sei'ibutsu - "Seiken"
+  ja_romaji: Seiibutsu - "Seiken"
   ko: 성유물－『성건』
   ko_rr: Seong-yumul - "Seonggeon"
   zh-TW:
