--- a/data/cards/46647144.yaml
+++ b/data/cards/46647144.yaml
@@ -8,7 +8,7 @@ name:
   it: Eredità del Mondo - "Lancia del Mondo"
   pt: Legado Mundial - "Lança Mundial"
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>－『<ruby>星<rt>せい</rt></ruby><ruby>槍<rt>そう</rt></ruby>』
-  ja_romaji: Sei'ibutsu - "Seisō"
+  ja_romaji: Seiibutsu - "Seisō"
   ko: 성유물－『성창』
   ko_rr:
   zh-TW:
