--- a/data/cards/57288708.yaml
+++ b/data/cards/57288708.yaml
@@ -8,7 +8,7 @@ name:
   it: Eredità del Mondo - "Calice del Mondo"
   pt: Legado Mundial - "Cálice Mundial"
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>－『<ruby>星<rt>せい</rt></ruby><ruby>杯<rt>はい</rt></ruby>』
-  ja_romaji: Sei'ibutsu - "Seihai"
+  ja_romaji: Seiibutsu - "Seihai"
   ko: 성유물-『성잔』
   ko_rr:
   zh-TW:
