--- a/data/cards/58374719.yaml
+++ b/data/cards/58374719.yaml
@@ -8,7 +8,7 @@ name:
   it: Lotta Eredità del Mondo
   pt: Luta do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>への<ruby>抵<rt>てい</rt></ruby><ruby>抗<rt>こう</rt></ruby>
-  ja_romaji: Sei'ibutsu e no Teikō
+  ja_romaji: Seiibutsu e no Teikō
   ko: 성유물을 향한 저항
   ko_rr:
   zh-TW:
