--- a/data/cards/62279666.yaml
+++ b/data/cards/62279666.yaml
@@ -8,7 +8,7 @@ name:
   it: Corruzione dell'Eredità del Mondo
   pt: Corrupção do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>が<ruby>導<rt>みちび</rt></ruby>く<ruby>果<rt>は</rt></ruby>て
-  ja_romaji: Sei'ibutsu ga Michibiku Hate
+  ja_romaji: Seiibutsu ga Michibiku Hate
   ko: 성유물이 이끄는끝
   ko_rr:
   zh-TW:
