--- a/data/cards/62530723.yaml
+++ b/data/cards/62530723.yaml
@@ -8,7 +8,7 @@ name:
   it: Sussurri Eredità del Mondo
   pt: Sussurros do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>囁<rt>ささや</rt></ruby>き
-  ja_romaji: Sei'ibutsu no Sasayaki
+  ja_romaji: Seiibutsu no Sasayaki
   ko: 성유물의 속삭임
   ko_rr:
   zh-TW:
