--- a/data/cards/68191756.yaml
+++ b/data/cards/68191756.yaml
@@ -8,7 +8,7 @@ name:
   it: Memoria Eredità del Mondo
   pt: Memória do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>機<rt>き</rt></ruby><ruby>憶<rt>おく</rt></ruby>
-  ja_romaji: Sei'ibutsu no Kioku
+  ja_romaji: Seiibutsu no Kioku
   ko: 성유물의 기억
   ko_rr: Seong-yumul-ui Gieok
   zh-TW:
