--- a/data/cards/87571563.yaml
+++ b/data/cards/87571563.yaml
@@ -8,7 +8,7 @@ name:
   it: Guardrago Eredità del Mondo
   pt: Dragão-Guarda do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>
-  ja_romaji: Sei'ibutsu no Shugoryū
+  ja_romaji: Seiibutsu no Shugoryū
   ko: 성유물의 수호룡
   ko_rr: Seong-yumul-ui Suhoryong
   zh-TW:
