--- a/data/cards/89320376.yaml
+++ b/data/cards/89320376.yaml
@@ -8,7 +8,7 @@ name:
   it: Pedine Eredità del Mondo
   pt: Peões do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>傀<rt>かい</rt></ruby><ruby>儡<rt>らい</rt></ruby>
-  ja_romaji: Sei'ibutsu no Kairai
+  ja_romaji: Seiibutsu no Kairai
   ko: 성유물의 괴뢰
   ko_rr:
   zh-TW:
