--- a/data/cards/93236220.yaml
+++ b/data/cards/93236220.yaml
@@ -8,7 +8,7 @@ name:
   it: Scontro Eredità del Mondo
   pt: Confronto do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>を<ruby>巡<rt>めぐ</rt></ruby>る<ruby>戦<rt>たたか</rt></ruby>い
-  ja_romaji: Sei'ibutsu o Meguru Tatakai
+  ja_romaji: Seiibutsu o Meguru Tatakai
   ko: 성유물을 둘러싼 싸움
   ko_rr:
   zh-TW:
