--- a/data/cards/99674361.yaml
+++ b/data/cards/99674361.yaml
@@ -8,7 +8,7 @@ name:
   it: Avvicendamento dell'Eredità del Mondo
   pt: Sucessão do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>を<ruby>継<rt>つ</rt></ruby>ぐもの
-  ja_romaji: Sei'ibutsu o Tsugu Mono
+  ja_romaji: Seiibutsu o Tsugumono
   ko: 성유물을 잇는 자
   ko_rr: Seong-yumul-eul It-neun Ja
   zh-TW:
