--- a/data/cards/02930675.yaml
+++ b/data/cards/02930675.yaml
@@ -8,7 +8,7 @@ name:
   it: Chiave Eredità del Mondo
   pt: Chave do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>へ<ruby>至<rt>いた</rt></ruby>る<ruby>鍵<rt>かぎ</rt></ruby>
-  ja_romaji: Sei'ibutsu he Itaru Kagi
+  ja_romaji: Seiibutsu e Itaru Kagi
   ko: 성유물에 이르는 열쇠
   ko_rr:
   zh-TW:
