--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN098
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   - set_number: LOD-000
     set_name: Legacy of Darkness
     rarities:
@@ -74,6 +78,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE098
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: DB2-FR177
     set_name: Dark Beginning 2
@@ -87,6 +95,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR098
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: DB2-IT177
     set_name: Dark Beginning 2
@@ -100,11 +112,19 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT098
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: MAMA-PT046
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT098
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: MA-17
     set_name: Mythological Age
