--- a/data/cards/08124921.yaml
+++ b/data/cards/08124921.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: The Lost Art Promotion B
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN102
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   - set_number: LOB-120
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -136,6 +140,10 @@ sets:
     set_name: The Lost Art Promotion B
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE102
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: LDD-F097
     set_name: Legend of Blue Eyes White Dragon
@@ -169,6 +177,10 @@ sets:
     set_name: The Lost Art Promotion B
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR102
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: LDD-I097
     set_name: Legend of Blue Eyes White Dragon
@@ -202,6 +214,10 @@ sets:
     set_name: The Lost Art Promotion B
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT102
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: LDB-P120
     set_name: Legend of Blue Eyes White Dragon
@@ -223,6 +239,10 @@ sets:
     set_name: The Lost Art Promotion B
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT102
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: ''
     set_name: Vol.4
