--- a/data/cards/21254443.yaml
+++ b/data/cards/21254443.yaml
@@ -8,7 +8,7 @@ name:
   it: Pietra Miliare Eredità del Mondo
   pt: Marco Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>導<rt>みちび</rt></ruby>き
-  ja_romaji: Sei'ibutsu no Michibiki
+  ja_romaji: Seiibutsu no Michibiki
   ko: 성유물의 인도
   ko_rr:
   zh-TW:
