--- a/data/cards/25163979.yaml
+++ b/data/cards/25163979.yaml
@@ -8,7 +8,7 @@ name:
   it: Incubo dell'Eredità del Mondo
   pt: Pesadelo do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>へ<ruby>誘<rt>いざな</rt></ruby>う<ruby>悪<rt>あく</rt></ruby><ruby>夢<rt>む</rt></ruby>
-  ja_romaji: Sei'ibutsu e Izanau Akumu
+  ja_romaji: Seiibutsu e Izanau Akumu
   ko: 성유물로 유혹하는 악몽
   ko_rr:
   zh-TW:
