--- a/data/cards/27705190.yaml
+++ b/data/cards/27705190.yaml
@@ -8,7 +8,7 @@ name:
   it: Connessione Mentale dell'Eredità del Mondo
   pt: Vínculo Mental do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>交<rt>こう</rt></ruby><ruby>心<rt>しん</rt></ruby>
-  ja_romaji: Sei'ibutsu no Kōshin
+  ja_romaji: Seiibutsu no Kōshin
   ko: 성유물의 교심
   ko_rr: Seong-yumul-ui Gyosim
   zh-TW:
