--- a/data/cards/27918365.yaml
+++ b/data/cards/27918365.yaml
@@ -8,7 +8,7 @@ name:
   it: Eredità del Mondo - "Corona del Mondo"
   pt: Legado Mundial - "Coroa Mundial"
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>－『<ruby>星<rt>せい</rt></ruby><ruby>冠<rt>かん</rt></ruby>』
-  ja_romaji: Sei'ibutsu - "Seikan"
+  ja_romaji: Seiibutsu - "Seikan"
   ko: 성유물－『성관』
   ko_rr: Seong-yumul - "Seonggwan"
   zh-TW:
