--- a/data/cards/31706048.yaml
+++ b/data/cards/31706048.yaml
@@ -8,7 +8,7 @@ name:
   it: Sopravvissuto dell'Eredità del Mondo
   pt: Sobrevivente do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>醒<rt>せい</rt></ruby><ruby>存<rt>ぞん</rt></ruby>
-  ja_romaji: Sei'ibutsu no Seizon
+  ja_romaji: Seiibutsu no Seizon
   ko: 성유물의 성존
   ko_rr: Seong-yumul-ui Seongjun
   zh-TW:
