--- a/data/cards/33396948.yaml
+++ b/data/cards/33396948.yaml
@@ -85,6 +85,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-EN101
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   - set_number: LOB-124
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -154,6 +158,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-DE101
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: LDD-F101
     set_name: Legend of Blue Eyes White Dragon
@@ -191,6 +199,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-FR101
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: LDD-I101
     set_name: Legend of Blue Eyes White Dragon
@@ -228,6 +240,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-IT101
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: LDB-P124
     set_name: Legend of Blue Eyes White Dragon
@@ -253,6 +269,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-PT101
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: ''
     set_name: Premium Pack (Japanese)
