--- a/data/cards/44519536.yaml
+++ b/data/cards/44519536.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: The Lost Art Promotion C
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN103
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   - set_number: LOB-121
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -136,6 +140,10 @@ sets:
     set_name: The Lost Art Promotion C
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE103
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: LDD-F098
     set_name: Legend of Blue Eyes White Dragon
@@ -169,6 +177,10 @@ sets:
     set_name: The Lost Art Promotion C
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR103
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: LDD-I098
     set_name: Legend of Blue Eyes White Dragon
@@ -202,6 +214,10 @@ sets:
     set_name: The Lost Art Promotion C
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT103
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: LDB-P121
     set_name: Legend of Blue Eyes White Dragon
@@ -223,6 +239,10 @@ sets:
     set_name: The Lost Art Promotion C
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT103
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: ''
     set_name: Vol.3
