--- a/data/cards/48130397.yaml
+++ b/data/cards/48130397.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-EN100
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   de:
   - set_number: PTDN-DE046
     set_name: Phantom Darkness
@@ -112,6 +116,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-DE100
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: PTDN-FR046
     set_name: Phantom Darkness
@@ -145,6 +153,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-FR100
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: PTDN-IT046
     set_name: Phantom Darkness
@@ -182,6 +194,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-IT100
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: SDCR-PT021
     set_name: Cyber Dragon Revolution Structure Deck
@@ -207,6 +223,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: BLCR-PT100
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: PTDN-JP046
     set_name: Phantom Darkness
