--- a/data/cards/59778096.yaml
+++ b/data/cards/59778096.yaml
@@ -8,7 +8,7 @@ name:
   it: Concessione Eredità del Mondo
   pt: Concessão do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>選<rt>せん</rt></ruby><ruby>託<rt>たく</rt></ruby>
-  ja_romaji: Sei'ibutsu no Sentaku
+  ja_romaji: Seiibutsu no Sentaku
   ko: 성유물의 선탁
   ko_rr: Seong-yumul-ui Seontak
   zh-TW:
