--- a/data/cards/67831115.yaml
+++ b/data/cards/67831115.yaml
@@ -8,7 +8,7 @@ name:
   it: Ombra Eredità del Mondo
   pt: Sombras do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>に<ruby>差<rt>さ</rt></ruby>す<ruby>影<rt>かげ</rt></ruby>
-  ja_romaji: Sei'ibutsu ni Sasu Kage
+  ja_romaji: Seiibutsu ni Sasu Kage
   ko: 성유물에 비치는 그림자
   ko_rr:
   zh-TW:
