--- a/data/cards/69031175.yaml
+++ b/data/cards/69031175.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-EN099
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   de:
   - set_number: CRMS-DE041
     set_name: Crimson Crisis
@@ -106,6 +110,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-DE099
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: CRMS-FR041
     set_name: Crimson Crisis
@@ -132,6 +140,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-FR099
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: CRMS-IT041
     set_name: Crimson Crisis
@@ -158,6 +170,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-IT099
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: PGLD-PT077
     set_name: Premium Gold
@@ -167,6 +183,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-PT099
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: CRMS-JP041
     set_name: Crimson Crisis
