--- a/data/cards/70903634.yaml
+++ b/data/cards/70903634.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: The Lost Art Promotion F
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN104
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   - set_number: LOB-122
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -136,6 +140,10 @@ sets:
     set_name: The Lost Art Promotion F
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE104
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: LDD-F099
     set_name: Legend of Blue Eyes White Dragon
@@ -169,6 +177,10 @@ sets:
     set_name: The Lost Art Promotion F
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR104
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   it:
   - set_number: LDD-I099
     set_name: Legend of Blue Eyes White Dragon
@@ -202,6 +214,10 @@ sets:
     set_name: The Lost Art Promotion F
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT104
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: LDB-P122
     set_name: Legend of Blue Eyes White Dragon
@@ -223,6 +239,10 @@ sets:
     set_name: The Lost Art Promotion F
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT104
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: ''
     set_name: 'Yu-Gi-Oh! Duel Monsters II: Dark duel Stories Game Guide 1 promotional card'
