--- a/data/cards/83477829.yaml
+++ b/data/cards/83477829.yaml
@@ -8,7 +8,7 @@ name:
   it: Eredità del Mondo - "Armatura del Mondo"
   pt: Legado Mundial - "Armadura Mundial"
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>－『<ruby>星<rt>せい</rt></ruby><ruby>鎧<rt>がい</rt></ruby>』
-  ja_romaji: Sei'ibutsu - "Seigai"
+  ja_romaji: Seiibutsu - "Seigai"
   ko: 성유물-『성개』
   ko_rr:
   zh-TW:
