--- a/data/cards/85763457.yaml
+++ b/data/cards/85763457.yaml
@@ -8,7 +8,7 @@ name:
   it: Dolore Eredità del Mondo
   pt: Lamento do Legado Mundial
   ja: <ruby>星<rt>せい</rt></ruby><ruby>遺<rt>い</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>に<ruby>響<rt>ひび</rt></ruby>く<ruby>残<rt>ざん</rt></ruby><ruby>叫<rt>きょう</rt></ruby>
-  ja_romaji: Sei'ibutsu ni Hibiku Zankyō
+  ja_romaji: Seiibutsu ni Hibiku Zankyō
   ko: 성유물에 울리는 잔규
   ko_rr:
   zh-TW:
