--- a/data/cards/11321089.yaml
+++ b/data/cards/11321089.yaml
@@ -93,6 +93,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS08
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: BACH-KR040
     set_name: Battle of Chaos
