--- a/data/cards/58844135.yaml
+++ b/data/cards/58844135.yaml
@@ -109,6 +109,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS06
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: DAMA-KR024
     set_name: Dawn of Majesty
