--- a/data/cards/98127546.yaml
+++ b/data/cards/98127546.yaml
@@ -113,6 +113,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS04
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: BLVO-KR050
     set_name: Blazing Vortex
