--- a/data/cards/03040496.yaml
+++ b/data/cards/03040496.yaml
@@ -111,6 +111,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS02
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: ROTD-KR043
     set_name: Rise of the Duelist
