--- a/data/cards/09822220.yaml
+++ b/data/cards/09822220.yaml
@@ -99,6 +99,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS07
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: BODE-KR030
     set_name: Burst of Destiny
