--- a/data/cards/26914168.yaml
+++ b/data/cards/26914168.yaml
@@ -102,6 +102,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS05
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: LIOV-KR022
     set_name: Lightning Overdrive
