--- a/data/cards/27134209.yaml
+++ b/data/cards/27134209.yaml
@@ -47,6 +47,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS12
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
