--- a/data/cards/45112597.yaml
+++ b/data/cards/45112597.yaml
@@ -92,6 +92,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS11
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: DABL-KR050
     set_name: Darkwing Blast
