--- a/data/cards/60465049.yaml
+++ b/data/cards/60465049.yaml
@@ -89,6 +89,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS09
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: DIFO-KR043
     set_name: Dimension Force
