--- a/data/cards/86066372.yaml
+++ b/data/cards/86066372.yaml
@@ -140,6 +140,10 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: SUB1-JPS01
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: ETCO-KR046
     set_name: Eternity Code
