--- a/data/cards/90448279.yaml
+++ b/data/cards/90448279.yaml
@@ -134,6 +134,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: SUB1-JPS03
+    set_name: Secret Utility Box
+    rarities:
+    - Secret Rare
   ko:
   - set_number: PHRA-KR045
     set_name: Phantom Rage
