--- a/data/cards/90448279.yaml
+++ b/data/cards/90448279.yaml
@@ -8,7 +8,7 @@ name:
   it: Arsenale Divino AA-ZEUS - Tuono del Cielo
   pt: Arsenal Divino AA-ZEUS - Trovão dos Céus
   ja: <ruby>天霆號<rt>ネガロギア</rt></ruby>アーゼウス
-  ja_romaji: Negarogia Ā Zeusu
+  ja_romaji: Negarogia Āzeusu
   ko: 네가로기어 아제우스
   ko_rr:
   zh-TW:
