--- a/data/cards/39552584.yaml
+++ b/data/cards/39552584.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Grapha, Dragon Lord of Dark World" + 1 DARK monster
-    When your opponent activates a Normal Spell/Trap Card, or monster effect (Quick Effect): You can make that effect become "Your opponent discards 1 card". You can only use this effect of "Grapha, Dragon Overlord of Dark World" once per turn. If this Fusion Summoned card in its owner's control leaves the field by an opponent's card: You can Special Summon 1 of your "Grapha, Dragon Lord of Dark World" that is banished or in your GY, then each player with a hand discards 1 card.
+    When your opponent activates a monster effect, or a Normal Spell/Trap Card, while you have a card(s) in your hand (Quick Effect): You can activate this effect; the activated effect becomes "Your opponent discards 1 card". You can only use this effect of "Grapha, Dragon Overlord of Dark World" once per turn. If this Fusion Summoned card in its owner's control leaves the field because of an opponent's card: You can Special Summon 1 of your "Grapha, Dragon Lord of Dark World" that is banished or in your GY, then each player with a hand discards 1 card.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ materials: '"Grapha, Dragon Lord of Dark World" + 1 DARK monster'
 series:
 - Dark World
 sets:
+  en:
+  - set_number: SR13-EN041
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: SR13-DE041
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SR13-FR041
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SR13-IT041
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SR13-PT041
+    set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SR13-JPP01
     set_name: "Structure Deck R: Devil's Gate The Doors of the Abyss Opened Pack"
