--- a/data/cards/08487449.yaml
+++ b/data/cards/08487449.yaml
@@ -76,6 +76,11 @@ sets:
     set_name: 'Structure Deck: Cyberse Link'
     rarities:
     - Common
+  pt:
+  - set_number: SDCL-PT020
+    set_name: 'Structure Deck: Cyberse Link'
+    rarities:
+    - Common
   ja:
   - set_number: ANPR-JP009
     set_name: Ancient Prophecy
