--- a/data/cards/06368038.yaml
+++ b/data/cards/06368038.yaml
@@ -285,6 +285,10 @@ sets:
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: SBPR-JP009
+    set_name: Yu-Gi-Oh! United Duel Tournament February 2023 prize card
+    rarities:
+    - Secret Rare
   ko:
   - set_number: LOB-K006
     set_name: Legend of Blue Eyes White Dragon
