--- a/data/cards/84012625.yaml
+++ b/data/cards/84012625.yaml
@@ -2,7 +2,7 @@ konami_id: 13000
 password: 84012625
 name:
   en: Cosmic Flare
-  de: Kosmisches Flimmern
+  de: Silberne Kondensstreifen
   es: Resplandor Cósmico
   fr: Brasier Cosmique
   it: Fiammata Cosmica
