--- a/data/cards/08794055.yaml
+++ b/data/cards/08794055.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 最远最深之渊
+  zh-CN: 深远而深邃的最深处
 text:
   en: |-
     While you control a Fish Synchro Monster, this card cannot be destroyed, or banished, by card effects. You can only use each of the following effects of "The Most Distant, Deepest Depths" once per turn. You can banish 1 Fish monster from your hand or GY; add 1 "Ghoti" monster from your Deck to your hand. If a Fish monster(s) is Normal or Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can target 1 Fish monster you control; banish it, and if you do, add this card to your hand.
@@ -30,7 +30,7 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的②③效果1回合各能使用1次。①：只要自己场上有鱼族同调怪兽存在，这张卡就不会被效果破坏且不会被效果除外。②：可以从自己的手牌或墓地将1只鱼族怪兽除外发动。从卡组将1只「Ghoti／异鱼」怪兽加入手牌。②：这张卡在墓地存在，自己场上有鱼族怪兽召唤或特殊召唤的场合，可以以自己场上的1只鱼族怪兽为对象发动。将那只怪兽除外，这张卡返回手牌。
+    自己场上有鱼族同调怪兽存在的场合，这张卡不会被效果破坏·除外。「深远而深邃的最深处」的以下效果1回合各能使用1次。可以从手卡·墓地把1只鱼族怪兽除外：从卡组把1只「魊影」怪兽加入手卡。自己场上有鱼族怪兽召唤·特殊召唤的场合，若这张卡在墓地存在（除伤害步骤外）：可以以自己场上1只鱼族怪兽为对象；那只怪兽除外，这张卡加入手卡。
 card_type: Spell
 property: Field
 sets:
