--- a/data/cards/16433136.yaml
+++ b/data/cards/16433136.yaml
@@ -26,7 +26,9 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    只有「御巫」怪兽才能装备。这个卡名的②效果1回合只能使用1次。①：装备怪兽不会被效果破坏。②：对手场上有怪兽被特殊召唤的场合，可以以自己以及对手场上的怪兽各1只为对象发动。使那些怪兽返回持有者的手牌。
+    「御巫」怪兽才能装备。这个卡名的②的效果1回合只能使用1次。
+    ①：装备怪兽不会被效果破坏。
+    ②：对方场上有怪兽特殊召唤的场合，以自己以及对方场上的怪兽各1只为对象才能发动。那些怪兽回到持有者手卡。
 card_type: Spell
 property: Equip
 series:
