--- a/data/cards/27012717.yaml
+++ b/data/cards/27012717.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 猛虎
 text:
   en: |-
     All other monsters on the field lose 500 ATK. Once per turn: You can destroy all face-up monsters on the field with less ATK than this card.
@@ -25,7 +25,9 @@ text:
     ①：このカードがモンスターゾーンに存在する限り、このカード以外のフィールドのモンスターの攻撃力は５００ダウンする。②：１ターンに１度、自分メインフェイズに発動できる。このカードより低い攻撃力を持つフィールドのモンスターを全て破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：只要这张卡在怪兽区域存在，这张卡以外的场上的怪兽的攻击力下降500。
+    ②：1回合1次，自己主要阶段才能发动。持有比这张卡低的攻击力的场上的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: EARTH
