--- a/data/cards/42705243.yaml
+++ b/data/cards/42705243.yaml
@@ -26,7 +26,8 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的卡1回合只能发动1张。①：从手牌或卡组特殊召唤1只「御巫」怪兽。那之后，可以从自己的手牌或墓地选1张可以装备那只怪兽的装备魔法卡装备给那只怪兽。用这个效果特殊召唤的怪兽从场上离开的场合除外。
+    这个卡名的卡在1回合只能发动1张。
+    ①：从手卡·卡组把1只「御巫」怪兽特殊召唤。那之后，可以从自己的手卡·墓地选1张那只怪兽可以装备的装备魔法卡给那只怪兽装备。这个效果特殊召唤的怪兽从场上离开的场合除外。
 card_type: Trap
 property: Normal
 series:
