--- a/data/cards/65477143.yaml
+++ b/data/cards/65477143.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 魔界剧团-自由剧作家
 text:
   en: |-
     If this card is Special Summoned from the Pendulum Zone: This card's owner reveals 3 "Abyss Script" Spells from their Deck, their opponent randomly picks 1 of them for this card's owner to Set to their field (but it is destroyed during the End Phase), also the rest are shuffled back into the Deck. If this card is destroyed: You can shuffle 1 "Abyss Script" Spell from your GY into the Deck. You can only use each effect of "Abyss Actor - Liberty Dramatist" once per turn.
@@ -25,7 +25,14 @@ text:
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＰゾーンからの特殊召喚に成功した場合に発動する。このカードの元々の持ち主は、自身のデッキから「魔界台本」魔法カード３枚を相手に見せ、相手はその中からランダムに１枚選ぶ。そのカード１枚を自身のフィールドにセットし、残りのカードはデッキに戻す。この効果でセットしたカードはエンドフェイズに破壊される。②：このカードが破壊された場合に発動できる。自分の墓地から「魔界台本」魔法カード１枚を選んでデッキに戻す。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ←8 【灵摆】 8→
+    这个卡名的灵摆效果1回合只能使用1次。
+    ①：自己或者对方的怪兽的攻击宣言时，丢弃1张手卡才能发动。这张卡在对方场上特殊召唤。
+    【怪兽效果】
+    这个卡名的①②的怪兽效果1回合各能使用1次。
+    ①：这张卡从灵摆区域的特殊召唤成功的场合发动。这张卡的原本持有者从自身卡组把3张「魔界台本」魔法卡给对方观看，对方从那之中随机选1张。那1张卡在自身场上盖放，剩下的卡回到卡组。这个效果盖放的卡在结束阶段破坏。
+    ②：这张卡被破坏的场合才能发动。从自己墓地选1张「魔界台本」魔法卡回到卡组。
 card_type: Monster
 monster_type_line: Fiend / Pendulum / Effect
 attribute: DARK
