--- a/data/cards/74615388.yaml
+++ b/data/cards/74615388.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 影界王战 雷瓦汀王
 text:
   en: |-
     2+ Level 9 monsters
@@ -27,7 +27,11 @@ text:
     ①：「影の王 レイヴァーテイン」は自分フィールドに１体しか表側表示で存在できない。②：相手フィールドのモンスターの攻撃力・守備力は１０００ダウンする。③：自分・相手ターンに、Ｘ召喚したこのカードをリリースして発動できる。ＥＸデッキから天使族モンスター以外の「ジェネレイド」Ｘモンスター１体を特殊召喚する。その後、このカードが持っていたＸ素材の数まで、自分または相手の、フィールド・墓地のカードを選んでこの効果で特殊召喚したモンスターの下に重ねてＸ素材にできる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    9星怪兽×2只以上
+    ①：「影界王战 雷瓦汀王」在自己场上只能有1只表侧表示存在。
+    ②：对方场上的怪兽的攻击力·守备力下降1000。
+    ③：自己·对方回合，把超量召唤的这张卡解放才能发动。从额外卡组把天使族怪兽以外的1只「王战」超量怪兽特殊召唤。那之后，可以选最多有这张卡持有的超量素材数量的自己或者对方的场上·墓地的卡在这个效果特殊召唤的怪兽下面重叠作为超量素材。
 card_type: Monster
 monster_type_line: Fairy / Xyz / Effect
 attribute: FIRE
