--- a/data/cards/79912449.yaml
+++ b/data/cards/79912449.yaml
@@ -26,7 +26,11 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    可以装备对手场上的怪兽。这个卡名的卡1回合只能发动1张。①：「御巫の誘い輪舞／御巫的引诱轮舞」在自己场上只能有1张以表侧表示存在。②：只要自己场上有「御巫」怪兽存在就得到装备怪兽的操作权。③：装备怪兽只要在自己场上存在就不能发动效果。④：这张卡从场上离开时装备怪兽送入墓地。
+    可以给对方场上的怪兽装备。这个卡名的卡在1回合只能发动1张。
+    ①：「御巫的诱轮舞」在自己场上只能有1张表侧表示存在。
+    ②：只要自己场上有「御巫」怪兽存在，得到装备怪兽的控制权。
+    ③：装备怪兽只要在自己场上存在，不能把效果发动。
+    ④：这张卡从场上离开时装备怪兽送去墓地。
 card_type: Spell
 property: Equip
 series:
