--- a/data/cards/06767771.yaml
+++ b/data/cards/06767771.yaml
@@ -12,7 +12,7 @@ name:
   ko: 티아라멘츠 스크림
   ko_rr: Tiaramencheu Seukeurim
   zh-TW:
-  zh-CN: 壹世坏·向哀泪姬劈斩的弦声
+  zh-CN: 劈穿壹世坏的弦声
 text:
   en: |-
     If a monster(s) is Normal or Special Summoned, and you control a "Tearlaments" monster or "Visas Starfrost" (except during the Damage Step): You can send the top 3 cards of your Deck to the GY, also, for the rest of this turn, all monsters your opponent controls lose 500 ATK. If this card is sent to the GY by card effect: You can add 1 "Tearlaments" Trap from your Deck to your hand. You can only use each effect of "Tearlaments Scream" once per turn.
@@ -32,7 +32,9 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 필드에 몬스터가 일반 소환 / 특수 소환되었을 경우에, 자신 필드에 "티아라멘츠" 몬스터 또는 "비서스＝스타프로스트"가 존재하고 있으면 발동할 수 있다. 자신의 덱 위에서 카드를 3장 묘지로 보낸다. 이 턴에, 상대 필드의 몬스터의 공격력은 500 내린다. ②: 이 카드가 효과로 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "티아라멘츠" 함정 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：场上有怪兽被召唤或特殊召唤的场合，若自己场上有「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在则可以发动。从自己卡组上面将3张卡送入墓地。这个回合，对手场上的怪兽的攻击力下降500。②：这张卡被效果送入墓地的场合可以发动。从卡组将1张「ティアラメンツ／哀泪姬」陷阱卡加入手牌。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：场上有怪兽召唤·特殊召唤的场合，若自己场上有「珠泪哀歌族」怪兽或者「维萨斯-斯塔弗罗斯特」存在则能发动。从自己卡组上面把3张卡送去墓地。这个回合，对方场上的怪兽的攻击力下降500。
+    ②：这张卡被效果送去墓地的场合才能发动。从卡组把1张「珠泪哀歌族」陷阱卡加入手卡。
 card_type: Spell
 property: Continuous
 series:
