--- a/data/cards/07236721.yaml
+++ b/data/cards/07236721.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 界放的肆世坏
 text:
   en: |-
     Your opponent cannot target "Scareclaw" Link Monsters and "Visas Starfrost" you control with card effects, also they cannot be destroyed by your opponent's card effects. Any monster destroyed by battle with your "Scareclaw" Link Monster or "Visas Starfrost" is banished. You can banish 1 "Scareclaw" Link Monster from your field or GY, then target 1 card your opponent controls; destroy it. You can only use this effect of "Scareclaw Defang" once per turn.
@@ -25,7 +25,11 @@ text:
     このカード名の③の効果は１ターンに１度しか使用できない。①：自分フィールドの、「スケアクロー」リンクモンスター及び「ヴィサス＝スタフロスト」は相手の効果の対象にならず、相手の効果では破壊されない。②：自分の、「スケアクロー」リンクモンスターまたは「ヴィサス＝スタフロスト」が戦闘で破壊したモンスターは墓地へは行かず除外される。③：自分のフィールド・墓地から「スケアクロー」リンクモンスター１体を除外し、相手フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的③的效果1回合只能使用1次。
+    ①：自己场上的「恐吓爪牙族」连接怪兽以及「维萨斯-斯塔弗罗斯特」不会成为对方的效果的对象，不会被对方的效果破坏。
+    ②：自己的「恐吓爪牙族」连接怪兽或者「维萨斯-斯塔弗罗斯特」战斗破坏的怪兽不去墓地而除外。
+    ③：从自己的场上·墓地把1只「恐吓爪牙族」连接怪兽除外，以对方场上1张卡为对象才能发动。那张卡破坏。
 card_type: Spell
 property: Continuous
 series:
