--- a/data/cards/21639276.yaml
+++ b/data/cards/21639276.yaml
@@ -12,7 +12,7 @@ name:
   ko: 크샤트리라 프리페어
   ko_rr: Keusyateurira Peuripe-eo
   zh-TW:
-  zh-CN: 怒刹利准备
+  zh-CN: 俱舍怒威族的准备
 text:
   en: |-
     During either player's turn: You can Special Summon 1 of your "Kashtira" monsters that is banished or in your hand. If your opponent activates a Trap Card or effect, you control a "Kashtira" monster, and this card is already face-up in your Spell & Trap Zone: You can look at your opponent's hand, and if you do, banish 1 card from it face-down. You can only use each effect of "Kashtira Preparations" once per turn.
@@ -32,7 +32,9 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 턴에 발동할 수 있다. 패의 몬스터 및 제외되어 있는 자신 몬스터 중에서, "크샤트리라" 몬스터 1장을 고르고 특수 소환한다. ②: 이 카드가 이미 마법 & 함정 존에 존재하는 상태에서, 상대가 함정 카드의 효과를 발동했을 경우에, 자신 필드에 "크샤트리라" 몬스터가 존재하고 있으면 발동할 수 있다. 상대의 패를 확인하고, 그 중의 1장을 골라 뒷면 표시로 제외한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：自己或对手的回合可以发动。从手牌的怪兽以及除外中的自己的怪兽之中，选1只「クシャトリラ／怒刹利」怪兽特殊召唤。②：这张卡已在魔法陷阱区存在的状态下，对手发动陷阱卡的效果的场合，若自己场上有「クシャトリラ／怒刹利」怪兽存在则可以发动。确认对手的手牌，选那之中的1张以里侧表示除外。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：自己·对方回合可以发动。从手卡的怪兽以及除外的自己怪兽之中选1只「俱舍怒威族」怪兽特殊召唤。
+    ②：这张卡已在魔法与陷阱区域存在的状态，对方把陷阱卡的效果发动的场合，若自己场上有「俱舍怒威族」怪兽存在则能发动。把对方手卡确认，选那之内的1张里侧表示除外。
 card_type: Trap
 property: Continuous
 series:
