--- a/data/cards/32731036.yaml
+++ b/data/cards/32731036.yaml
@@ -12,7 +12,7 @@ name:
   ko: 더 비스테드 루벨리온
   ko_rr: Deo Biseutedeu Rubellion
   zh-TW:
-  zh-CN: 深渊之兽 赤红逆龙
+  zh-CN: 深渊之兽 赫界龙
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by Tributing 1 Level 6 or higher DARK Dragon monster. You can only Special Summon "The Bystial Lubellion" once per turn this way. You can send this card from your hand to the GY; add 1 "Bystial" monster from your Deck to your hand, except "The Bystial Lubellion". During your Main Phase: You can place 1 "Branded" Continuous Spell/Trap from your Deck face-up on your field. You can only use each effect of "The Bystial Lubellion" once per turn.
@@ -32,7 +32,9 @@ text:
     이 카드는 통상 소환할 수 없다. "더 비스테드 루벨리온"은 1턴에 1번, 자신 필드의 레벨 6 이상의 드래곤족 / 어둠 속성 몬스터 1장을 릴리스했을 경우에만 패 / 묘지에서 특수 소환할 수 있다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 패에서 묘지로 보내고 발동할 수 있다. 덱에서 "더 비스테드 루벨리온" 이외의 "비스테드" 몬스터 1장을 패에 넣는다. ②: 자신 메인 페이즈에 발동할 수 있다. 덱에서 "낙인" 지속 마법 / 지속 함정 카드 1장을 고르고 자신 필드에 앞면 표시로 놓는다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤。「深淵の獣ルベリオン／深渊之兽 赤红逆龙」1回合1次，只有在将自己场上的1只等级6以上的龙族·暗属性怪兽解放的场合才能从手牌或墓地特殊召唤。这个卡名的①②效果1回合各能使用1次。①：可以将这张卡从手牌送入墓地发动。从卡组将1只「深淵の獣ルベリオン／深渊之兽 赤红逆龙」以外的「ビーステッド／深渊之兽」怪兽加入手牌。②：自己的主要阶段可以发动。从卡组选1张「烙印」永续魔法或永续陷阱卡以表侧表示放置到自己的场上。
+    这张卡不能通常召唤。「深渊之兽 赫界龙」1回合1次在把自己场上1只6星以上的龙族·暗属性怪兽解放的场合才能从手卡·墓地特殊召唤。这个卡名的①②的效果1回合各能使用1次。
+    ①：把这张卡从手卡送去墓地才能发动。从卡组把「深渊之兽 赫界龙」以外的1只「深渊之兽」怪兽加入手卡。
+    ②：自己主要阶段才能发动。从卡组选1张「烙印」永续魔法·永续陷阱卡在自己场上表侧表示放置。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
