--- a/data/cards/32909498.yaml
+++ b/data/cards/32909498.yaml
@@ -12,7 +12,7 @@ name:
   ko: 크샤트리라 펜리르
   ko_rr: Keusyateurira Pennireu
   zh-TW:
-  zh-CN: 怒刹利巨狼
+  zh-CN: 俱舍怒威族·芬里尔狼
 text:
   en: |-
     If you control no monsters, you can Special Summon this card (from your hand). You can only use each of the following effects of "Kashtira Fenrir" once per turn. During your Main Phase: You can add 1 "Kashtira" monster from your Deck to your hand. When this card declares an attack, or if your opponent activates a monster effect (except during the Damage Step): You can target 1 face-up card your opponent controls; banish it, face-down.
@@ -32,7 +32,10 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 존재하지 않을 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 자신 메인 페이즈에 발동할 수 있다. 덱에서 "크샤트리라" 몬스터 1장을 패에 넣는다. ③: 이 카드의 공격 선언시, 또는 상대가 몬스터의 효과를 발동했을 경우, 상대 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 뒷면 표시로 제외한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②③效果1回合各能使用1次。①：自己场上没有怪兽存在的场合，这张卡可以从手牌特殊召唤。②：自己的主要阶段可以发动。从卡组将1只「クシャトリラ／怒刹利」怪兽加入手牌。③：这张卡的攻击宣言时，或者对手发动怪兽的效果的场合，可以以对手场上的1张表侧表示的卡为对象发动。将那张卡以里侧表示除外。
+    这个卡名的②③的效果1回合各能使用1次。
+    ①：自己场上没有怪兽存在的场合，这张卡可以从手卡特殊召唤。
+    ②：自己主要阶段才能发动。从卡组把1只「俱舍怒威族」怪兽加入手卡。
+    ③：这张卡的攻击宣言时或者对方把怪兽的效果发动的场合，以对方场上1张表侧表示的卡为对象才能发动。那张卡里侧表示除外。
 card_type: Monster
 monster_type_line: Psychic / Effect
 attribute: EARTH
