--- a/data/cards/37617348.yaml
+++ b/data/cards/37617348.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 救援王牌 消火栓
+  zh-CN: 救援ACE队 消防栓
 text:
   en: |-
     While you control a "Rescue-ACE" monster other than "Rescue-ACE Hydrant", your opponent's monsters cannot target this card for attacks, also your opponent cannot target this card with card effects. You can only use each of the following effects of "Rescue-ACE Hydrant" once per turn. You can activate 1 Quick-Play Spell Card or Trap Card Set by your "Rescue-ACE" card's effect the turn it was Set. During your Main Phase: You can add 1 "Rescue-ACE" monster from your Deck to your hand, except "Rescue-ACE Hydrant".
@@ -26,7 +26,10 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的②③效果1回合各能使用1次。①：只要自己场上有「R－ACEハイドラント／救援王牌 消火栓」以外的「R－ACE／救援王牌」怪兽存在，对手就不能选择这张卡作为攻击对象，也不能作为效果对象。②：只要这张卡在怪兽区存在，用自己的「R－ACE／救援王牌」卡的效果盖放的1张速攻魔法或陷阱卡在盖放的回合也能发动。③：自己的主要阶段可以发动。从卡组将1只「R－ACEハイドラント／救援王牌 消火栓」以外的「R－ACE／救援王牌」怪兽加入手牌。
+    这个卡名的②③的效果1回合各能使用1次。
+    ①：只要自己场上有「救援ACE队 消防栓」以外的「救援ACE队」怪兽存在，对方不能选择这张卡作为攻击对象，也不能作为效果的对象。
+    ②：只要这张卡在怪兽区域存在，自己的「救援ACE队」卡的效果盖放的1张速攻魔法·陷阱卡在盖放的回合也能发动。
+    ③：自己主要阶段才能发动。从卡组把「救援ACE队 消防栓」以外的1只「救援ACE队」怪兽加入手卡。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: FIRE
