--- a/data/cards/47759571.yaml
+++ b/data/cards/47759571.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 赛车维修站骑士 厄尔利
+  zh-CN: 维修骑士 厄莉
 text:
   en: |-
     2 Effect Monsters
@@ -36,7 +36,8 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：这张卡的链接区的怪兽的效果发动时，可以以对手场上的1只效果怪兽为对象发动（伤害步骤不能发动）。直到回合结束时，那只怪兽的攻击力变为0，效果无效化。②：这张卡被战斗或效果破坏送入墓地的回合的结束阶段可以发动。将这张卡特殊召唤。
+    效果怪兽2只
+    这张卡所连接区的怪兽的效果发动时（除伤害步骤外）（诱发即时效果）：可以以对方场上1只效果怪兽为对象；直到回合结束时，那只怪兽的攻击力变成0，效果无效化。这张卡被战斗·效果破坏，被送去墓地的回合的结束阶段：可以把这张卡特殊召唤。「维修骑士 厄莉」的每个效果1回合各能使用1次。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: FIRE
