--- a/data/cards/53154400.yaml
+++ b/data/cards/53154400.yaml
@@ -32,7 +32,8 @@ text:
     ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 주사위를 1회 던진다. 1 / 6 이 나왔을 경우, 필드의 카드를 2장까지 고르고 파괴한다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 주사위를 1회 던진다. 2~5 가 나왔을 경우, 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드가 몬스터 존에 앞면 표시로 존재하는 한, 자신은 엑스트라 덱에서 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡特殊召唤成功的场合可以发动。掷1次骰子。掷出1或6的场合，选场上的最多2张卡破坏。②：这张卡被送入墓地的场合可以发动。掷1次骰子。掷出2～5的场合，将这张卡特殊召唤。只要用这个效果特殊召唤的这张卡在怪兽区以表侧表示存在，自己就不能从额外卡组特殊召唤怪兽。
+    ①：这张卡特殊召唤成功的场合才能发动。掷1次骰子。1·6出现的场合，选场上最多2张卡破坏。
+    ②：这张卡被送去墓地的场合才能发动。掷1次骰子。2～5出现的场合，这张卡特殊召唤。只要这个效果特殊召唤的这张卡在怪兽区域表侧表示存在，自己不能从额外卡组把怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Psychic / Effect
 attribute: DARK
