--- a/data/cards/73542331.yaml
+++ b/data/cards/73542331.yaml
@@ -12,7 +12,7 @@ name:
   ko: 크샤트리라 샹그릴라
   ko_rr: Keusyateurira Syanggeurilla
   zh-TW:
-  zh-CN: 怒刹利 香格里拉
+  zh-CN: 俱舍怒威族的香格里拉茧
 text:
   en: |-
     2+ Level 7 monsters
@@ -40,8 +40,11 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 스탠바이 페이즈에 발동할 수 있다. 덱에서 "크샤트리라" 몬스터 1장을 특수 소환한다. ②: 상대의 카드가 뒷면 표시로 제외될 때마다, 사용하고 있지 않은 메인 몬스터 존 또는 마법 & 함정 존을 1곳 지정하고 발동할 수 있다. 지정한 존은 이 몬스터가 앞면 표시로 존재하는 동안에는 사용할 수 없다. ③: 필드의 이 카드가 전투 / 효과로 파괴될 경우, 대신에 이 카드의 엑시즈 소재를 1개 제거할 수 있다.
   zh-TW:
   zh-CN: |-
-    等级7怪兽×2只以上
-    这个卡名的①效果1回合只能使用1次。①：自己或对手的准备阶段可以发动。从卡组特殊召唤1只「クシャトリラ／怒刹利」怪兽。②：每次对手的卡以里侧表示除外就可以指定1处没有在使用的主要怪兽区或者魔法陷阱区发动。指定的区域在这只怪兽以表侧表示存在期间不能使用。③：场上的这张卡要被战斗或效果破坏的场合，可以将这张卡的1个多维素材取除作为代替。
+    7星怪兽×2只以上
+    这个卡名的①的效果1回合只能使用1次。
+    ①：自己·对方的准备阶段才能发动。从卡组把1只「俱舍怒威族」怪兽特殊召唤。
+    ②：每次对方的卡被里侧表示除外，指定没有使用的主要怪兽区域或者魔法与陷阱区域1处才能发动。指定的区域在这只怪兽表侧表示存在期间不能使用。
+    ③：场上的这张卡被战斗·效果破坏的场合，可以作为代替把这张卡1个超量素材取除。
 card_type: Monster
 monster_type_line: Psychic / Xyz / Effect
 attribute: FIRE
